--- a/BookReview/객체지향과 디자인패턴/객체지향과 디자인패턴.md
+++ b/BookReview/객체지향과 디자인패턴/객체지향과 디자인패턴.md
@@ -1,53 +1,53 @@
-°´Ã¼ÁöÇâ°ú µðÀÚÀÎÆÐÅÏ
+ê°ì²´ì§€í–¥ê³¼ ë””ìžì¸íŒ¨í„´
 ===
 
-µé¾î°¡±â
+ë“¤ì–´ê°€ê¸°
 ---
 ----
-**°´Ã¼ÁöÇâ¾ð¾î¸¦ »ç¿ëÇØ¼­ ÇÁ·Î±×·¥À» ÀÛ¼ºÇÑ´Ù°íÇØ¼­ °´Ã¼ÁöÇâÀûÀÎ ÇÁ·Î±×·¥ÀÌµÇ´Â°ÍÀº ¾Æ´Ï´Ù.**
+**ê°ì²´ì§€í–¥ì–¸ì–´ë¥¼ ì‚¬ìš©í•´ì„œ í”„ë¡œê·¸ëž¨ì„ ìž‘ì„±í•œë‹¤ê³ í•´ì„œ ê°ì²´ì§€í–¥ì ì¸ í”„ë¡œê·¸ëž¨ì´ë˜ëŠ”ê²ƒì€ ì•„ë‹ˆë‹¤.**
 
-Java¿Í °°Àº ¾ð¾î¸¦ »ç¿ëÇÏ¸é¼­µµ ÃæºÐÈ÷ ÀýÂ÷ÁöÇâÀûÀÎ ÇÁ·Î±×·¥À» ÀÛ¼ºÇÏ°ÔµÉ ¼öµµ ÀÖ´Ù. ÀÌ¹ø Àå¿¡¼­ ´Ù·ç´Â ÇÙ½ÉÀº °´Ã¼ÁöÇâ¾ð¾î¸¦ »ç¿ëÇÏ¸é¼­µµ °´Ã¼ÁöÇâÀûÀÎ ¼º°ÝÀ» ÀüÇô ¶ç°íÀÖÁö¾Ê´Â ¿¹½Ã¸¦ º¸¿©ÁØ´Ù.
+Javaì™€ ê°™ì€ ì–¸ì–´ë¥¼ ì‚¬ìš©í•˜ë©´ì„œë„ ì¶©ë¶„ížˆ ì ˆì°¨ì§€í–¥ì ì¸ í”„ë¡œê·¸ëž¨ì„ ìž‘ì„±í•˜ê²Œë  ìˆ˜ë„ ìžˆë‹¤. ì´ë²ˆ ìž¥ì—ì„œ ë‹¤ë£¨ëŠ” í•µì‹¬ì€ ê°ì²´ì§€í–¥ì–¸ì–´ë¥¼ ì‚¬ìš©í•˜ë©´ì„œë„ ê°ì²´ì§€í–¥ì ì¸ ì„±ê²©ì„ ì „í˜€ ë„ê³ ìžˆì§€ì•ŠëŠ” ì˜ˆì‹œë¥¼ ë³´ì—¬ì¤€ë‹¤.
 
-ÁöÀúºÐÇØÁö´Â ÄÚµå¸¦ º¸ÀÚ.
+ì§€ì €ë¶„í•´ì§€ëŠ” ì½”ë“œë¥¼ ë³´ìž.
 
-¼­ºñ½º¿ä±¸»çÇ×Àº °£´ÜÇÏ°Ô »ç¿ëÀÚ°¡ ¸Þ´º1, ¸Þ´º2¸¦ ´­·¶À» ¶§ ÇØ´çÈ­¸éÀ» Ãâ·ÂÇØÁØ´Ù. ±×¸®°í ¹öÆ°1À» ´©¸£¸é ¸Þ´º1°ú ¸Þ´º2¿¡ µû¶ó °¢°¢ ÇØ´çÇÏ´Â È­¸éÀ» Ãâ·ÂÇÑ´Ù.
+ì„œë¹„ìŠ¤ìš”êµ¬ì‚¬í•­ì€ ê°„ë‹¨í•˜ê²Œ ì‚¬ìš©ìžê°€ ë©”ë‰´1, ë©”ë‰´2ë¥¼ ëˆŒë €ì„ ë•Œ í•´ë‹¹í™”ë©´ì„ ì¶œë ¥í•´ì¤€ë‹¤. ê·¸ë¦¬ê³  ë²„íŠ¼1ì„ ëˆ„ë¥´ë©´ ë©”ë‰´1ê³¼ ë©”ë‰´2ì— ë”°ë¼ ê°ê° í•´ë‹¹í•˜ëŠ” í™”ë©´ì„ ì¶œë ¥í•œë‹¤.
 
 ```java
     if(menu == 1){
-        print(È­¸é1)
+        print(í™”ë©´1)
     }else if(menu == 2){
-        print(È­¸é1)
+        print(í™”ë©´1)
     }else if(butoon == 1){
         if(menu == null){
             return;
         }else if(menu == 1){
-            print(¸Þ´º1¿¡´ëÇÑ ¹öÆ°1ÀÇ È­¸é)
+            print(ë©”ë‰´1ì—ëŒ€í•œ ë²„íŠ¼1ì˜ í™”ë©´)
         }else if(menu ==2){
-            print(¸Þ´º2¿¡´ëÇÑ ¹öÆ°1ÀÇ È­¸é)
+            print(ë©”ë‰´2ì—ëŒ€í•œ ë²„íŠ¼1ì˜ í™”ë©´)
         }
     }
 ```
-¿ä±¸»çÇ×Àº À§ÀÇ À¯»çÄÚµå¿Í °°ÀÌ ¼³°èµÉ°ÍÀÌ´Ù.
+ìš”êµ¬ì‚¬í•­ì€ ìœ„ì˜ ìœ ì‚¬ì½”ë“œì™€ ê°™ì´ ì„¤ê³„ë ê²ƒì´ë‹¤.
 
-¸Þ´º´Â 2°³ »ÓÀÌ°í ¹öÆ°Àº 1°³»ÓÀÌ´Ù. ÀÌ »óÈ²¿¡¼± ¹®Á¦ÀÇ½ÄÀ» ´À³¢±â¾î·ÆÁö¸¸, ¼­ºñ½º ¿ä±¸»çÇ×ÀÌ¶ó´Â°ÍÀº Ç×»ó º¯È­ÇÑ´Ù.
+ë©”ë‰´ëŠ” 2ê°œ ë¿ì´ê³  ë²„íŠ¼ì€ 1ê°œë¿ì´ë‹¤. ì´ ìƒí™©ì—ì„  ë¬¸ì œì˜ì‹ì„ ëŠë¼ê¸°ì–´ë µì§€ë§Œ, ì„œë¹„ìŠ¤ ìš”êµ¬ì‚¬í•­ì´ë¼ëŠ”ê²ƒì€ í•­ìƒ ë³€í™”í•œë‹¤.
 
-»ç¿ëÀÚ°¡ ¸Þ´º¸¦ Ãß°¡ÇØ´Þ¶ó´Â ¿äÃ»ÀÌµé¾î¿Ô´Ù. °³¹ßÀÚ´Â ¿ä±¸»çÇ× ¼öÁ¤À» À§ÇØ else if¹®À» ÇÏ³ª Ãß°¡ÇØ menu 3 ¿¡´ëÇÑ È­¸éÀ» Ãâ·ÂÇØÁÖ°í button 1ÀÌ ÀÔ·ÂµÇ¾úÀ» ¶§¿¡µµ else if¹®À» Ãß°¡ÇØ Ã³¸®ÇÒ °ÍÀÌ´Ù.
+ì‚¬ìš©ìžê°€ ë©”ë‰´ë¥¼ ì¶”ê°€í•´ë‹¬ë¼ëŠ” ìš”ì²­ì´ë“¤ì–´ì™”ë‹¤. ê°œë°œìžëŠ” ìš”êµ¬ì‚¬í•­ ìˆ˜ì •ì„ ìœ„í•´ else ifë¬¸ì„ í•˜ë‚˜ ì¶”ê°€í•´ menu 3 ì—ëŒ€í•œ í™”ë©´ì„ ì¶œë ¥í•´ì£¼ê³  button 1ì´ ìž…ë ¥ë˜ì—ˆì„ ë•Œì—ë„ else ifë¬¸ì„ ì¶”ê°€í•´ ì²˜ë¦¬í•  ê²ƒì´ë‹¤.
 
-¾ÆÁ÷±îÁöµµ »ç¿ëÀÚÀÇ ¿ä±¸»çÇ×Àº ½±°Ô ¼öÁ¤µÉ ¼ö ÀÖ´Ù.
+ì•„ì§ê¹Œì§€ë„ ì‚¬ìš©ìžì˜ ìš”êµ¬ì‚¬í•­ì€ ì‰½ê²Œ ìˆ˜ì •ë  ìˆ˜ ìžˆë‹¤.
 
-±×·±µ¥ ¾ÈÅ¸±õ°Ôµµ(?) ¼­ºñ½º°¡ À¯¸íÇØÁ® ´õ ¸¹Àº ¿ä±¸»çÇ×ÀÌ µé¾î¿Â´Ù. ¸Þ´º´Â 10°³¸¦ Ãß°¡ÇÏ°í ¹öÆ°µµ 10°³¸¦ ´õ Ãß°¡ÇØ´Þ¶ó°íÇÑ´Ù.
+ê·¸ëŸ°ë° ì•ˆíƒ€ê¹ê²Œë„(?) ì„œë¹„ìŠ¤ê°€ ìœ ëª…í•´ì ¸ ë” ë§Žì€ ìš”êµ¬ì‚¬í•­ì´ ë“¤ì–´ì˜¨ë‹¤. ë©”ë‰´ëŠ” 10ê°œë¥¼ ì¶”ê°€í•˜ê³  ë²„íŠ¼ë„ 10ê°œë¥¼ ë” ì¶”ê°€í•´ë‹¬ë¼ê³ í•œë‹¤.
 
-¸Þ´º¿¡´ëÇÑ ºÐ±âºÐÀº ´õ ´Ã¾î³¯ °ÍÀÌ°í button¸¶´Ù ºÐ±â¹®µµ ±âÇÏ±Þ¼öÀûÀ¸·Î ´Ã¾î³¯°ÍÀÌ´Ù.
+ë©”ë‰´ì—ëŒ€í•œ ë¶„ê¸°ë¶„ì€ ë” ëŠ˜ì–´ë‚  ê²ƒì´ê³  buttonë§ˆë‹¤ ë¶„ê¸°ë¬¸ë„ ê¸°í•˜ê¸‰ìˆ˜ì ìœ¼ë¡œ ëŠ˜ì–´ë‚ ê²ƒì´ë‹¤.
 
-Á¡Á¡ °³¹ßÀÚ´Â ÄÚµå¸¦ ¾îµð¿¡ Ãß°¡ÇØ¾ßÇÒÁö Ã£´Â ½Ã°£ÀÌ ±æ¾îÁú °ÍÀÌ°í ´©¶ôÇÏ´Â °æ¿ìµµ ¹ß»ýÇÒ °ÍÀÌ´Ù.
+ì ì  ê°œë°œìžëŠ” ì½”ë“œë¥¼ ì–´ë””ì— ì¶”ê°€í•´ì•¼í• ì§€ ì°¾ëŠ” ì‹œê°„ì´ ê¸¸ì–´ì§ˆ ê²ƒì´ê³  ëˆ„ë½í•˜ëŠ” ê²½ìš°ë„ ë°œìƒí•  ê²ƒì´ë‹¤.
 
-ÇÑ¸¶µð·Î ±²ÀåÈ÷ ÁöÀúºÐÇÑ ÄÚµå°¡ µÈ´Ù.
+í•œë§ˆë””ë¡œ êµ‰ìž¥ížˆ ì§€ì €ë¶„í•œ ì½”ë“œê°€ ëœë‹¤.
 
 ---
 
-ÀÌÁ¦ À§ ÄÚµå¸¦ °´Ã¼ÁöÇâÀûÀ¸·Î ¼³°èÇØº¸ÀÚ
+ì´ì œ ìœ„ ì½”ë“œë¥¼ ê°ì²´ì§€í–¥ì ìœ¼ë¡œ ì„¤ê³„í•´ë³´ìž
 
-¼­ºñ½º ¿ä±¸»çÇ×Áß¿¡¼­ Áßº¹µÇ´Â ÄÚµåµéÀÌ Á¸ÀçÇÑ´Ù. ¸Þ´º¸¦ ¼±ÅÃÇÏ¸é ¸Þ´ºÀÇ Á¾·ù¿¡ °ü°è¾øÀÌ ÇØ´çÇÏ´Â È­¸éÀ» Ãâ·ÂÇØÁÖ°í ¹öÆ°Àº ¸Þ´ºÀÇ Á¾·ù¿¡µû¶ó ´Ù¸¥ È­¸éÀ» Ãâ·ÂÇØÁà¾ßÇÑ´Ù´Â °øÅëÁ¡ÀÌ ÀÖ´Ù.
+ì„œë¹„ìŠ¤ ìš”êµ¬ì‚¬í•­ì¤‘ì—ì„œ ì¤‘ë³µë˜ëŠ” ì½”ë“œë“¤ì´ ì¡´ìž¬í•œë‹¤. ë©”ë‰´ë¥¼ ì„ íƒí•˜ë©´ ë©”ë‰´ì˜ ì¢…ë¥˜ì— ê´€ê³„ì—†ì´ í•´ë‹¹í•˜ëŠ” í™”ë©´ì„ ì¶œë ¥í•´ì£¼ê³  ë²„íŠ¼ì€ ë©”ë‰´ì˜ ì¢…ë¥˜ì—ë”°ë¼ ë‹¤ë¥¸ í™”ë©´ì„ ì¶œë ¥í•´ì¤˜ì•¼í•œë‹¤ëŠ” ê³µí†µì ì´ ìžˆë‹¤.
 
 ```java
     interface ScreenUI{
@@ -56,13 +56,13 @@ Java¿Í °°Àº ¾ð¾î¸¦ »ç¿ëÇÏ¸é¼­µµ ÃæºÐÈ÷ ÀýÂ÷ÁöÇâÀûÀÎ ÇÁ·Î±×·¥À» ÀÛ¼ºÇÏ°ÔµÉ ¼öµµ À
     }
 
     class Menu1UI implments ScreenUI{
-        printfScreen(¸Þ´º1)
-        Button1Clicked(¸Þ´º 1¿¡´ëÇÑ È­¸é)
+        printfScreen(ë©”ë‰´1)
+        Button1Clicked(ë©”ë‰´ 1ì—ëŒ€í•œ í™”ë©´)
     }
 
     class Menu2UI implments ScreenUI{
-        printfScreen(¸Þ´º2)
-        Button1Clicked(¸Þ´º 2¿¡´ëÇÑ È­¸é)
+        printfScreen(ë©”ë‰´2)
+        Button1Clicked(ë©”ë‰´ 2ì—ëŒ€í•œ í™”ë©´)
     }
 
     class main(){
@@ -80,89 +80,89 @@ Java¿Í °°Àº ¾ð¾î¸¦ »ç¿ëÇÏ¸é¼­µµ ÃæºÐÈ÷ ÀýÂ÷ÁöÇâÀûÀÎ ÇÁ·Î±×·¥À» ÀÛ¼ºÇÏ°ÔµÉ ¼öµµ À
     }
 ```
 
-°øÅëÀûÀÎ ºÎºÐÀ» interface·Î ±¸ÇöÇÏ¿© °´Ã¼°¡ ÀÌ¸¦ ±¸ÇöÇÏµµ·Ï °­Á¦ÇÏ¿´´Ù. 
+ê³µí†µì ì¸ ë¶€ë¶„ì„ interfaceë¡œ êµ¬í˜„í•˜ì—¬ ê°ì²´ê°€ ì´ë¥¼ êµ¬í˜„í•˜ë„ë¡ ê°•ì œí•˜ì˜€ë‹¤. 
 
-Ã³À½¿£ °ÑÀ¸·Îº¸¸é ÁöÀúºÐÇØÁö´Â ÄÚµåº¸´Ù ±¸Á¶´Â ´õ º¹ÀâÇØÁ³´Ù. ±×·±µ¥ °´Ã¼ÁöÇâÀÇ ¹¦¹Ì´Â ¿ä±¸»çÇ×ÀÌ Áõ°¡µÉ ¶§ ºûÀ» ¹ßÇÑ´Ù.
+ì²˜ìŒì—” ê²‰ìœ¼ë¡œë³´ë©´ ì§€ì €ë¶„í•´ì§€ëŠ” ì½”ë“œë³´ë‹¤ êµ¬ì¡°ëŠ” ë” ë³µìž¡í•´ì¡Œë‹¤. ê·¸ëŸ°ë° ê°ì²´ì§€í–¥ì˜ ë¬˜ë¯¸ëŠ” ìš”êµ¬ì‚¬í•­ì´ ì¦ê°€ë  ë•Œ ë¹›ì„ ë°œí•œë‹¤.
 
-¿ì¼± ÀÎÅÍÆäÀÌ½ºÅ¸ÀÔÀ¸·Î °´Ã¼¸¦ »ý¼ºÇÏ°ÔµÇ¸é¼­ currentScreenº¯¼ö ÇÏ³ª·Î Button1¿¡´ëÇÑ Á¦¾îµµ ½¬¿öÁ³´Ù. Button2°¡ »ý¼ºµÇ´õ¶óµµ ÀÎÅÍÆäÀÌ½º¿¡ ¸Þ¼­µå¸¦ Ãß°¡ÇØÁÖ°í else if¹®À» ÇÏ³ª¸¸ Ãß°¡ÇØÁÖ¸é µÈ´Ù. ¸Þ´º°¡ Ãß°¡µÇ¸é ¸Þ´º¿¡´ëÇÑ Å¬·¡½º¸¦ »ý¼ºÇÏ°í ScreenUI¸¦ ±¸ÇöÇØÁÖ¸é °£´ÜÇÏ°Ô ³¡³­´Ù.
+ìš°ì„  ì¸í„°íŽ˜ì´ìŠ¤íƒ€ìž…ìœ¼ë¡œ ê°ì²´ë¥¼ ìƒì„±í•˜ê²Œë˜ë©´ì„œ currentScreenë³€ìˆ˜ í•˜ë‚˜ë¡œ Button1ì—ëŒ€í•œ ì œì–´ë„ ì‰¬ì›Œì¡Œë‹¤. Button2ê°€ ìƒì„±ë˜ë”ë¼ë„ ì¸í„°íŽ˜ì´ìŠ¤ì— ë©”ì„œë“œë¥¼ ì¶”ê°€í•´ì£¼ê³  else ifë¬¸ì„ í•˜ë‚˜ë§Œ ì¶”ê°€í•´ì£¼ë©´ ëœë‹¤. ë©”ë‰´ê°€ ì¶”ê°€ë˜ë©´ ë©”ë‰´ì—ëŒ€í•œ í´ëž˜ìŠ¤ë¥¼ ìƒì„±í•˜ê³  ScreenUIë¥¼ êµ¬í˜„í•´ì£¼ë©´ ê°„ë‹¨í•˜ê²Œ ëë‚œë‹¤.
 
-¸Þ´º°¡ 100°³ÀÌ°í ¹öÆ°ÀÌ 1°³ÀÎ °æ¿ì¿¡ ¹öÆ°¿¡´ëÇÑ if¹®¼Ó¿¡ 100°¡Áö ¸Þ´º¿¡´ëÇÑ if¹®ÀÌ Ãß°¡µÇ¾î¾ßÇßÁö¸¸ ÀÌÁ¨ ÇÏ³ªÀÇ ¹®ÀåÀ¸·Î Á¦¾î°¡µÈ´Ù.
+ë©”ë‰´ê°€ 100ê°œì´ê³  ë²„íŠ¼ì´ 1ê°œì¸ ê²½ìš°ì— ë²„íŠ¼ì—ëŒ€í•œ ifë¬¸ì†ì— 100ê°€ì§€ ë©”ë‰´ì—ëŒ€í•œ ifë¬¸ì´ ì¶”ê°€ë˜ì–´ì•¼í–ˆì§€ë§Œ ì´ì   í•˜ë‚˜ì˜ ë¬¸ìž¥ìœ¼ë¡œ ì œì–´ê°€ëœë‹¤.
 
-ÀÌÃ³·³ ¼ÒÇÁÆ®¿þ¾î´Â º¯È­ÇÏ´Â ¿ä±¸»çÇ×¿¡ ¸Â°Ô º¯È­ÇÒ ¼ö ÀÖ¾î¾ßÇÑ´Ù. »õ·Î¿î ¿ä±¸»çÇ×À» Áï°¢ÀûÀ¸·Î ¹Ý¿µÇÏ±âÀ§ÇØ¼± °´Ã¼ÁöÇâÀûÀÎ ¼³°è·Î À¯Áöº¸¼ö°¡ ½±°ÔÇØ¾ßÇÑ´Ù.
-
----
-
-ÀýÂ÷ ÁöÇâ°ú °´Ã¼ ÁöÇâ
----
-
-**ÀýÂ÷ ÁöÇâÀû**À¸·Î ¼³°èÇÑ´Ù´Â °ÍÀº ±×Àú ÇÁ·Î±×·¥ÀÌ ÇÑÁÙ ÇÑÁÙ ÀýÂ÷¿¡µû¶ó ½ÇÇàµÈ´Ù´Â ÀÇ¹Ì¸¦ ³Ñ¾î¼­¼­ **µ¥ÀÌÅÍ¸¦ Áß½ÉÀ¸·Î ÇÁ·Î½ÃÀú(ÀýÂ÷,ÇÔ¼ö)°¡ ±¸¼º**µÈ´Ù´Â °ÍÀ» ÀÇ¹ÌÇÑ´Ù.
-
-µ¥ÀÌÅÍ¸¦ Áß½ÉÀ¸·Î ÇÁ·Î½ÃÀú¸¦ ±¸¼ºÇÏ°ÔµÇ¸é µ¥ÀÌÅÍ Å¸ÀÔÀÌ³ª ÀÇ¹Ì¸¦ º¯°æÇØ¾ßÇÒ ¶§ ¼öÁ¤ÇØ¾ßÇÏ´Â ÇÁ·Î½ÃÀú°¡ Áõ°¡ÇÏ°ÔµÈ´Ù.
-
-¹è¿­Å¸ÀÔÀÇ µ¥ÀÌÅÍ¸¦ µÎ°í ´Ù¼öÀÇ ÇÁ·Î½ÃÀú°¡ ±¸ÇöµÇ¾îÀÖÀ» ¶§¸¦ »ý°¢ÇØº¸ÀÚ. °©ÀÚ±â ¼­ºñ½º ¿ä±¸»çÇ×ÀÌ º¯°æµÇ¾î ¹è¿­Å¸ÀÔÀÌ ¾Æ´Ñ ¿­°ÅÅ¸ÀÔÀ¸·Î º¯°æÇØ¾ßÇÑ´Ù¸é ¹è¿­Å¸ÀÔÀ¸·Î ÇÁ·Î½ÃÀú¸¦ ±¸¼ºÇÏ´Â ¸ðµç ÇÁ·Î½ÃÀú¸¦ ¼öÁ¤ÇØ¾ß¸¸ÇÑ´Ù.
-
-Áï ÇÏ³ªÀÇ º¯°æ»çÇ×ÀÌ ¼ö ¸¹Àº º¯°æ»çÇ×À» ºÒ·¯ÀÏÀ¸Å°°ÔµÈ´Ù.
-
-**°´Ã¼ÁöÇâ**Àº ÇÁ·Î½ÃÀú¸¦ ½ÇÇàÇÔ¿¡ ÀÖ¾î ÇÊ¿äÇÑ ¸¸Å­ÀÇ µ¥ÀÌÅÍ¸¦ °¡Áø´Ù. ÀÌ·¸°Ô Á¶°¢Á¶°¢ÀÇ ´ÜÀ§¸¦ °´Ã¼¶ó°íÇÏ¸ç °´Ã¼´Â **¼­·ÎÀÇ µ¥ÀÌÅÍ¿¡ Á¢±ÙÇÏ´Â°ÍÀÌ ¾Æ´Ï¶ó °´Ã¼°¡ Á¦°øÇÏ´Â ±â´ÉÀ» »ç¿ëÇÏ´Â °Í**ÀÌ´Ù. 
-
-°´Ã¼ AÀÇ µ¥ÀÌÅÍÅ¸ÀÔÀÌ º¯°æµÇ¾ú´ÙÇÏ´õ¶óµµ °´Ã¼ B´Â °´Ã¼ A°¡ Á¦°øÇÏ´Â **±â´É**À» »ç¿ëÇÏ±â¶§¹®¿¡ ¿µÇâÀ» ¹ÞÁö¾Ê´Â´Ù.
-
-°´Ã¼ÀÇ ÇÙ½ÉÀº **±â´É**À» Á¦°øÇÏ´Â °ÍÀÌÁö °´Ã¼³»ºÎ¿¡¼­ ¾î¶² µ¥ÀÌÅÍ¸¦ ´Ù·ç´ÂÁö´Â (´Ù¸¥ °´Ã¼ ÀÔÀå¿¡¼­)Áß¿äÇÏÁö¾Ê´Ù.
-
-°´Ã¼°¡ Á¦°øÇÏ´Â ±â´ÉÀ» ¿ÀÆÛ·¹ÀÌ¼ÇÀÌ¶ó°í ºÎ¸£°í ±× **¿ÀÆÛ·¹ÀÌ¼Ç**À» »ç¿ëÇÏ·Á¸é »ç¿ë¹ýÀ» ¾Ë¾Æ¾ßÇÏ´Âµ¥ ±×°ÍÀ» **½Ã±×´ÏÃ³(ÀÌ¸§, ÆÄ¶ó¹ÌÅÍ, °á°ú °ª)** ¶ó°í ºÎ¸¥´Ù. ¿ÀÆÛ·¹ÀÌ¼ÇÀÇ ÁýÇÕÀ» °´Ã¼ÀÇ ÀÎÅÍÆäÀÌ½º(ÀÚ¹ÙÀÇ ÀÎÅÍÆäÀÌ½º¿Í ´Ù¸§)¶ó°í ºÎ¸¥´Ù. ±×¸®°í °´Ã¼°¡ ´Ù¸¥ °´Ã¼¿¡°Ô ¿ÀÆÛ·¹ÀÌ¼ÇÀ» ¿äÃ»ÇÏ´Â°ÍÀ» **¸Þ½ÃÁö¸¦ º¸³½´Ù**°í Ç¥ÇöÇÑ´Ù.
+ì´ì²˜ëŸ¼ ì†Œí”„íŠ¸ì›¨ì–´ëŠ” ë³€í™”í•˜ëŠ” ìš”êµ¬ì‚¬í•­ì— ë§žê²Œ ë³€í™”í•  ìˆ˜ ìžˆì–´ì•¼í•œë‹¤. ìƒˆë¡œìš´ ìš”êµ¬ì‚¬í•­ì„ ì¦‰ê°ì ìœ¼ë¡œ ë°˜ì˜í•˜ê¸°ìœ„í•´ì„  ê°ì²´ì§€í–¥ì ì¸ ì„¤ê³„ë¡œ ìœ ì§€ë³´ìˆ˜ê°€ ì‰½ê²Œí•´ì•¼í•œë‹¤.
 
 ---
 
-°´Ã¼ÀÇ Ã¥ÀÓ°ú Å©±â
+ì ˆì°¨ ì§€í–¥ê³¼ ê°ì²´ ì§€í–¥
 ---
-´Ù½Ã ¸»ÇÏÁö¸¸ °´Ã¼´Â °´Ã¼°¡ Á¦°øÇÏ´Â ±â´ÉÀ¸·Î Á¤ÀÇµÈ´Ù. Ã¥¿¡ ³ª¿Â ¿¹½Ã¸¦ »ìÆìº¸ÀÚ
 
-    ÆÄÀÏ ÀÐ±â °´Ã¼ : ÆÄÀÏ¿¡¼­ µ¥ÀÌÅÍ¸¦ ÀÐ¾î¿Í Á¦°ø
-    ¾ÏÈ£È­ Ã³¸® °´Ã¼ : µ¥ÀÌÅÍ¸¦ ¾ÏÈ£È­ÇØ¼­ ´Ù¸¥ ÆÄÀÏ¿¡ Àü¼Û
-    ÆÄÀÏ ¾²±â °´Ã¼ : ÆÄÀÏ¿¡ µ¥ÀÌÅÍ¸¦ ¾´´Ù.
+**ì ˆì°¨ ì§€í–¥ì **ìœ¼ë¡œ ì„¤ê³„í•œë‹¤ëŠ” ê²ƒì€ ê·¸ì € í”„ë¡œê·¸ëž¨ì´ í•œì¤„ í•œì¤„ ì ˆì°¨ì—ë”°ë¼ ì‹¤í–‰ëœë‹¤ëŠ” ì˜ë¯¸ë¥¼ ë„˜ì–´ì„œì„œ **ë°ì´í„°ë¥¼ ì¤‘ì‹¬ìœ¼ë¡œ í”„ë¡œì‹œì €(ì ˆì°¨,í•¨ìˆ˜)ê°€ êµ¬ì„±**ëœë‹¤ëŠ” ê²ƒì„ ì˜ë¯¸í•œë‹¤.
 
-°¢°¢ÀÇ °´Ã¼´Â Ã¥À½À» °¡Áö°íÀÖ´Ù. **°´Ã¼ÀÇ Ã¥ÀÓÀ» °áÁ¤ÇÏ´Â °Í**ÀÌ °´Ã¼ ÁöÇâ ¼³°èÀÇ Ãâ¹ßÁ¡ÀÌ´Ù.
+ë°ì´í„°ë¥¼ ì¤‘ì‹¬ìœ¼ë¡œ í”„ë¡œì‹œì €ë¥¼ êµ¬ì„±í•˜ê²Œë˜ë©´ ë°ì´í„° íƒ€ìž…ì´ë‚˜ ì˜ë¯¸ë¥¼ ë³€ê²½í•´ì•¼í•  ë•Œ ìˆ˜ì •í•´ì•¼í•˜ëŠ” í”„ë¡œì‹œì €ê°€ ì¦ê°€í•˜ê²Œëœë‹¤.
 
-ºí·¢Àè ÇÁ·ÎÁ§Æ®¸¦ ÇÏ¸é¼­µµ ´À²¼Áö¸¸, °´Ã¼ÀÇ Ã¥ÀÓÀ» Ã³À½ºÎÅÍ Á¤È®ÇÏ°Ô ±ÔÁ¤ÇÏ°í ÇÁ·Î±×·¡¹ÖÇÏ±â¶õ ½±Áö¾Ê´Ù.
+ë°°ì—´íƒ€ìž…ì˜ ë°ì´í„°ë¥¼ ë‘ê³  ë‹¤ìˆ˜ì˜ í”„ë¡œì‹œì €ê°€ êµ¬í˜„ë˜ì–´ìžˆì„ ë•Œë¥¼ ìƒê°í•´ë³´ìž. ê°‘ìžê¸° ì„œë¹„ìŠ¤ ìš”êµ¬ì‚¬í•­ì´ ë³€ê²½ë˜ì–´ ë°°ì—´íƒ€ìž…ì´ ì•„ë‹Œ ì—´ê±°íƒ€ìž…ìœ¼ë¡œ ë³€ê²½í•´ì•¼í•œë‹¤ë©´ ë°°ì—´íƒ€ìž…ìœ¼ë¡œ í”„ë¡œì‹œì €ë¥¼ êµ¬ì„±í•˜ëŠ” ëª¨ë“  í”„ë¡œì‹œì €ë¥¼ ìˆ˜ì •í•´ì•¼ë§Œí•œë‹¤.
 
-¿ì¼±Àº ±â´ÉÀ» Á¤¸®ÇÏ°í ÀÌ ±â´ÉµéÀ» °¢ °´Ã¼¿¡ ¹èºÐÇØÁà¾ßÇÑ´Ù. ¿©·¯°¡ÁöÀÇ °æ¿ìÀÇ ¼öµéÀÌ ÀÖ°í ÇÑ °¡ÁöÀÇ °æ¿ìÀÇ ¼ö¸¦ ¼±ÅÃÇÏ´õ¶óµµ ³ªÁß¿¡ ¼öÁ¤µÉ ¼ö ÀÖ´Ù.
+ì¦‰ í•˜ë‚˜ì˜ ë³€ê²½ì‚¬í•­ì´ ìˆ˜ ë§Žì€ ë³€ê²½ì‚¬í•­ì„ ë¶ˆëŸ¬ì¼ìœ¼í‚¤ê²Œëœë‹¤.
 
-°´Ã¼ÀÇ Ã¥ÀÓ¼ÒÀç¸¦ ±ÔÁ¤ÇÏ´Â ¹æ¹ý¿¡´ëÇØ Ã¥¿¡¼­ Á¦½ÃÇÏ´Â ÇÑ °¡Áö È®½ÇÇÑ ±ÔÄ¢ÀÌÀÖ´Ù.
+**ê°ì²´ì§€í–¥**ì€ í”„ë¡œì‹œì €ë¥¼ ì‹¤í–‰í•¨ì— ìžˆì–´ í•„ìš”í•œ ë§Œí¼ì˜ ë°ì´í„°ë¥¼ ê°€ì§„ë‹¤. ì´ë ‡ê²Œ ì¡°ê°ì¡°ê°ì˜ ë‹¨ìœ„ë¥¼ ê°ì²´ë¼ê³ í•˜ë©° ê°ì²´ëŠ” **ì„œë¡œì˜ ë°ì´í„°ì— ì ‘ê·¼í•˜ëŠ”ê²ƒì´ ì•„ë‹ˆë¼ ê°ì²´ê°€ ì œê³µí•˜ëŠ” ê¸°ëŠ¥ì„ ì‚¬ìš©í•˜ëŠ” ê²ƒ**ì´ë‹¤. 
 
-Ã¥¿¡¼­ÀÇ ¿¹½Ã¸¦ ÅëÇØ °´Ã¼ÀÇ Ã¥ÀÓÀ» ´õ Àß°Ô ³ª´²º¸¸é
+ê°ì²´ Aì˜ ë°ì´í„°íƒ€ìž…ì´ ë³€ê²½ë˜ì—ˆë‹¤í•˜ë”ë¼ë„ ê°ì²´ BëŠ” ê°ì²´ Aê°€ ì œê³µí•˜ëŠ” **ê¸°ëŠ¥**ì„ ì‚¬ìš©í•˜ê¸°ë•Œë¬¸ì— ì˜í–¥ì„ ë°›ì§€ì•ŠëŠ”ë‹¤.
 
-    Èå¸§ Á¦¾î °´Ã¼ : ¾ÏÈ£È­ ¿äÃ», µ¥ÀÌÅÍ ÀÐ±â ¿äÃ», ÆÄÀÏ ¾²±â ¿äÃ»
-    ÆÄÀÏ ÀÐ±â °´Ã¼ : ÆÄÀÏ¿¡¼­ µ¥ÀÌÅÍ¸¦ ÀÐ¾î¿Í Á¦°ø
-    ¾ÏÈ£È­ Ã³¸® °´Ã¼ : µ¥ÀÌÅÍ¸¦ ¾ÏÈ£È­ÇØ¼­ ´Ù¸¥ ÆÄÀÏ¿¡ Àü¼Û
-    ÆÄÀÏ ¾²±â °´Ã¼ : ÆÄÀÏ¿¡ µ¥ÀÌÅÍ¸¦ ¾´´Ù.
+ê°ì²´ì˜ í•µì‹¬ì€ **ê¸°ëŠ¥**ì„ ì œê³µí•˜ëŠ” ê²ƒì´ì§€ ê°ì²´ë‚´ë¶€ì—ì„œ ì–´ë–¤ ë°ì´í„°ë¥¼ ë‹¤ë£¨ëŠ”ì§€ëŠ” (ë‹¤ë¥¸ ê°ì²´ ìž…ìž¥ì—ì„œ)ì¤‘ìš”í•˜ì§€ì•Šë‹¤.
 
-À§¿Í °°ÀÌ Å« Èå¸§À» Á¦¾îÇÏ´Â °´Ã¼¿Í °¢°¢ÀÇ ÀÛÀº ±â´ÉÀ» ´ã´çÇÏ´Â °´Ã¼·Î Ã¥ÀÓÀ» ³ª´² Á» ´õ °´Ã¼ÁöÇâÀû ¼³°è¿¡ °¡±î¿öÁ³´Ù.
+ê°ì²´ê°€ ì œê³µí•˜ëŠ” ê¸°ëŠ¥ì„ ì˜¤í¼ë ˆì´ì…˜ì´ë¼ê³  ë¶€ë¥´ê³  ê·¸ **ì˜¤í¼ë ˆì´ì…˜**ì„ ì‚¬ìš©í•˜ë ¤ë©´ ì‚¬ìš©ë²•ì„ ì•Œì•„ì•¼í•˜ëŠ”ë° ê·¸ê²ƒì„ **ì‹œê·¸ë‹ˆì²˜(ì´ë¦„, íŒŒë¼ë¯¸í„°, ê²°ê³¼ ê°’)** ë¼ê³  ë¶€ë¥¸ë‹¤. ì˜¤í¼ë ˆì´ì…˜ì˜ ì§‘í•©ì„ ê°ì²´ì˜ ì¸í„°íŽ˜ì´ìŠ¤(ìžë°”ì˜ ì¸í„°íŽ˜ì´ìŠ¤ì™€ ë‹¤ë¦„)ë¼ê³  ë¶€ë¥¸ë‹¤. ê·¸ë¦¬ê³  ê°ì²´ê°€ ë‹¤ë¥¸ ê°ì²´ì—ê²Œ ì˜¤í¼ë ˆì´ì…˜ì„ ìš”ì²­í•˜ëŠ”ê²ƒì„ **ë©”ì‹œì§€ë¥¼ ë³´ë‚¸ë‹¤**ê³  í‘œí˜„í•œë‹¤.
 
-**°´Ã¼°¡ °®´Â Ã¥ÀÓÀÇ Å©±â´Â ÀÛÀ¸¸é ÀÛÀ»¼ö·Ï ÁÁ´Ù**
+---
+
+ê°ì²´ì˜ ì±…ìž„ê³¼ í¬ê¸°
+---
+ë‹¤ì‹œ ë§í•˜ì§€ë§Œ ê°ì²´ëŠ” ê°ì²´ê°€ ì œê³µí•˜ëŠ” ê¸°ëŠ¥ìœ¼ë¡œ ì •ì˜ëœë‹¤. ì±…ì— ë‚˜ì˜¨ ì˜ˆì‹œë¥¼ ì‚´íŽ´ë³´ìž
+
+    íŒŒì¼ ì½ê¸° ê°ì²´ : íŒŒì¼ì—ì„œ ë°ì´í„°ë¥¼ ì½ì–´ì™€ ì œê³µ
+    ì•”í˜¸í™” ì²˜ë¦¬ ê°ì²´ : ë°ì´í„°ë¥¼ ì•”í˜¸í™”í•´ì„œ ë‹¤ë¥¸ íŒŒì¼ì— ì „ì†¡
+    íŒŒì¼ ì“°ê¸° ê°ì²´ : íŒŒì¼ì— ë°ì´í„°ë¥¼ ì“´ë‹¤.
+
+ê°ê°ì˜ ê°ì²´ëŠ” ì±…ìŒì„ ê°€ì§€ê³ ìžˆë‹¤. **ê°ì²´ì˜ ì±…ìž„ì„ ê²°ì •í•˜ëŠ” ê²ƒ**ì´ ê°ì²´ ì§€í–¥ ì„¤ê³„ì˜ ì¶œë°œì ì´ë‹¤.
+
+ë¸”ëž™ìž­ í”„ë¡œì íŠ¸ë¥¼ í•˜ë©´ì„œë„ ëŠê¼ˆì§€ë§Œ, ê°ì²´ì˜ ì±…ìž„ì„ ì²˜ìŒë¶€í„° ì •í™•í•˜ê²Œ ê·œì •í•˜ê³  í”„ë¡œê·¸ëž˜ë°í•˜ê¸°ëž€ ì‰½ì§€ì•Šë‹¤.
+
+ìš°ì„ ì€ ê¸°ëŠ¥ì„ ì •ë¦¬í•˜ê³  ì´ ê¸°ëŠ¥ë“¤ì„ ê° ê°ì²´ì— ë°°ë¶„í•´ì¤˜ì•¼í•œë‹¤. ì—¬ëŸ¬ê°€ì§€ì˜ ê²½ìš°ì˜ ìˆ˜ë“¤ì´ ìžˆê³  í•œ ê°€ì§€ì˜ ê²½ìš°ì˜ ìˆ˜ë¥¼ ì„ íƒí•˜ë”ë¼ë„ ë‚˜ì¤‘ì— ìˆ˜ì •ë  ìˆ˜ ìžˆë‹¤.
+
+ê°ì²´ì˜ ì±…ìž„ì†Œìž¬ë¥¼ ê·œì •í•˜ëŠ” ë°©ë²•ì—ëŒ€í•´ ì±…ì—ì„œ ì œì‹œí•˜ëŠ” í•œ ê°€ì§€ í™•ì‹¤í•œ ê·œì¹™ì´ìžˆë‹¤.
+
+ì±…ì—ì„œì˜ ì˜ˆì‹œë¥¼ í†µí•´ ê°ì²´ì˜ ì±…ìž„ì„ ë” ìž˜ê²Œ ë‚˜ëˆ ë³´ë©´
+
+    íë¦„ ì œì–´ ê°ì²´ : ì•”í˜¸í™” ìš”ì²­, ë°ì´í„° ì½ê¸° ìš”ì²­, íŒŒì¼ ì“°ê¸° ìš”ì²­
+    íŒŒì¼ ì½ê¸° ê°ì²´ : íŒŒì¼ì—ì„œ ë°ì´í„°ë¥¼ ì½ì–´ì™€ ì œê³µ
+    ì•”í˜¸í™” ì²˜ë¦¬ ê°ì²´ : ë°ì´í„°ë¥¼ ì•”í˜¸í™”í•´ì„œ ë‹¤ë¥¸ íŒŒì¼ì— ì „ì†¡
+    íŒŒì¼ ì“°ê¸° ê°ì²´ : íŒŒì¼ì— ë°ì´í„°ë¥¼ ì“´ë‹¤.
+
+ìœ„ì™€ ê°™ì´ í° íë¦„ì„ ì œì–´í•˜ëŠ” ê°ì²´ì™€ ê°ê°ì˜ ìž‘ì€ ê¸°ëŠ¥ì„ ë‹´ë‹¹í•˜ëŠ” ê°ì²´ë¡œ ì±…ìž„ì„ ë‚˜ëˆ  ì¢€ ë” ê°ì²´ì§€í–¥ì  ì„¤ê³„ì— ê°€ê¹Œì›Œì¡Œë‹¤.
+
+**ê°ì²´ê°€ ê°–ëŠ” ì±…ìž„ì˜ í¬ê¸°ëŠ” ìž‘ìœ¼ë©´ ìž‘ì„ìˆ˜ë¡ ì¢‹ë‹¤**
 --
 
-¿Ö °´Ã¼°¡ °®´Â Ã¥ÀÓÀ» ÀÛ°Ô ¸¸µé¾î¾ßÇÏ´Â°É±î?
+ì™œ ê°ì²´ê°€ ê°–ëŠ” ì±…ìž„ì„ ìž‘ê²Œ ë§Œë“¤ì–´ì•¼í•˜ëŠ”ê±¸ê¹Œ?
 
-°´Ã¼ÀÇ Ã¥ÀÓÀÌ Å« °æ¿ì¸¦ »ý°¢ÇØº¸ÀÚ. ¹Ù·Î ¸ðµç µ¥ÀÌÅÍ¿Í ÇÁ·Î½ÃÀúµéÀÌ ÇÑ °´Ã¼¿¡ ¸ð¾ÆÁ®ÀÖ´Â °æ¿ì´Ù.
-ÀÌ °æ¿ì ÀýÂ÷ÁöÇâ°ú °°Àº È¿°ú¸¦ ³½´Ù.
+ê°ì²´ì˜ ì±…ìž„ì´ í° ê²½ìš°ë¥¼ ìƒê°í•´ë³´ìž. ë°”ë¡œ ëª¨ë“  ë°ì´í„°ì™€ í”„ë¡œì‹œì €ë“¤ì´ í•œ ê°ì²´ì— ëª¨ì•„ì ¸ìžˆëŠ” ê²½ìš°ë‹¤.
+ì´ ê²½ìš° ì ˆì°¨ì§€í–¥ê³¼ ê°™ì€ íš¨ê³¼ë¥¼ ë‚¸ë‹¤.
 
-´Ù½Ã¸»ÇØ ÇÑ °´Ã¼ÀÇ Ã¥ÀÓÀÌ Ä¿Áö¸é Ä¿Áú¼ö·Ï ÀýÂ÷ÁöÇâÀû ¼³°è·Î º¯ÁúµÈ´Ù.
+ë‹¤ì‹œë§í•´ í•œ ê°ì²´ì˜ ì±…ìž„ì´ ì»¤ì§€ë©´ ì»¤ì§ˆìˆ˜ë¡ ì ˆì°¨ì§€í–¥ì  ì„¤ê³„ë¡œ ë³€ì§ˆëœë‹¤.
 
-µû¶ó¼­ °´Ã¼°¡ °¡Áö´Â Ã¥ÀÓÀÌ ÀÛÀ¸¸é º¯°æ¿¡ À¯¿¬ÇÏ°Ô ´ëÃ³ÇÒ ¼ö ÀÖ°ÔµÈ´Ù.
+ë”°ë¼ì„œ ê°ì²´ê°€ ê°€ì§€ëŠ” ì±…ìž„ì´ ìž‘ìœ¼ë©´ ë³€ê²½ì— ìœ ì—°í•˜ê²Œ ëŒ€ì²˜í•  ìˆ˜ ìžˆê²Œëœë‹¤.
 
-Áö±Ý±îÁö ¼³¸íÇÑ ³»¿ëÀº **°´Ã¼ÁöÇâ ¼³°è¿øÄ¢ SOLIDÀÇ ´ÜÀÏ Ã¥ÀÓ ¿øÄ¢**¿¡ ÇØ´çÇÏ¸ç µÚ¿¡¼­ ÀÚ¼¼È÷ ´Ù·ïº¸ÀÚ.
+ì§€ê¸ˆê¹Œì§€ ì„¤ëª…í•œ ë‚´ìš©ì€ **ê°ì²´ì§€í–¥ ì„¤ê³„ì›ì¹™ SOLIDì˜ ë‹¨ì¼ ì±…ìž„ ì›ì¹™**ì— í•´ë‹¹í•˜ë©° ë’¤ì—ì„œ ìžì„¸ížˆ ë‹¤ë¤„ë³´ìž.
 
 ---
 
-ÀÇÁ¸
+ì˜ì¡´
 ---
-°´Ã¼°¡ ´Ù¸¥ °´Ã¼¿¡ ÀÇÁ¸ÇÑ´Ù´Â °ÍÀº ¹«½¼ ÀÇ¹ÌÀÏ±î.
+ê°ì²´ê°€ ë‹¤ë¥¸ ê°ì²´ì— ì˜ì¡´í•œë‹¤ëŠ” ê²ƒì€ ë¬´ìŠ¨ ì˜ë¯¸ì¼ê¹Œ.
 
-³»°¡ Á÷Á¢ ÀÛ¼ºÇÑ ÄÚµå¸¦ º¸ÀÚ.
+ë‚´ê°€ ì§ì ‘ ìž‘ì„±í•œ ì½”ë“œë¥¼ ë³´ìž.
 
 ```java
     public class BlackJackGame {
-    CardDeck deck; // ÀüÃ¼ Ä«µå µ¦
+    CardDeck deck; // ì „ì²´ ì¹´ë“œ ë±
     Player player = new Player();
     Dealer dealer = new Dealer();
     public BlackJackGame() {
@@ -170,22 +170,22 @@ Java¿Í °°Àº ¾ð¾î¸¦ »ç¿ëÇÏ¸é¼­µµ ÃæºÐÈ÷ ÀýÂ÷ÁöÇâÀûÀÎ ÇÁ·Î±×·¥À» ÀÛ¼ºÇÏ°ÔµÉ ¼öµµ À
     }
     }
 ```
-BlackJackGame Å¬·¡½º´Â Player¿Í Dealer CardDeck °´Ã¼¸¦ »ý¼ºÇØ »ç¿ëÇÏ°í ÀÖ´Ù.
+BlackJackGame í´ëž˜ìŠ¤ëŠ” Playerì™€ Dealer CardDeck ê°ì²´ë¥¼ ìƒì„±í•´ ì‚¬ìš©í•˜ê³  ìžˆë‹¤.
 
-ÀÌ °æ¿ì BlackJackGame Å¬·¡½º´Â Player,Dealer,CardDeck °´Ã¼¿¡ ÀÇÁ¸ÇÑ´Ù°í º¼ ¼ö ÀÖ´Ù.
+ì´ ê²½ìš° BlackJackGame í´ëž˜ìŠ¤ëŠ” Player,Dealer,CardDeck ê°ì²´ì— ì˜ì¡´í•œë‹¤ê³  ë³¼ ìˆ˜ ìžˆë‹¤.
 
-    A°´Ã¼ <---- B°´Ã¼ <----- C°´Ã¼
+    Aê°ì²´ <---- Bê°ì²´ <----- Cê°ì²´
 
-ÀÌ·¯ÇÑ ÀÇÁ¸°ü°èÀÏ¶§ C°´Ã¼ÀÇ º¯È­´Â B¿Í A¿¡ ¿µÇâÀ» ¹ÌÄ¡°ÔµÇ°í ³ª¾Æ°¡ A°´Ã¼ÀÇ º¯È­´Â ´Ù½Ã C°´Ã¼¿¡ ¿µÇâÀ» ¹ÌÄ¡´Â ¼øÈ¯ ÀÇÁ¸ÀÌ ¹ß»ýÇÒ ¼ö ÀÖ´Ù.
+ì´ëŸ¬í•œ ì˜ì¡´ê´€ê³„ì¼ë•Œ Cê°ì²´ì˜ ë³€í™”ëŠ” Bì™€ Aì— ì˜í–¥ì„ ë¯¸ì¹˜ê²Œë˜ê³  ë‚˜ì•„ê°€ Aê°ì²´ì˜ ë³€í™”ëŠ” ë‹¤ì‹œ Cê°ì²´ì— ì˜í–¥ì„ ë¯¸ì¹˜ëŠ” ìˆœí™˜ ì˜ì¡´ì´ ë°œìƒí•  ìˆ˜ ìžˆë‹¤.
 
-ÀÌ·¯ÇÑ ¹®Á¦¸¦ Àû±ØÀûÀ¸·Î ÇØ°áÇÏ±âÀ§ÇØ SOLIDÀÇ ÀÇÁ¸ ¿ªÀüÀÇ ¿øÄ¢ÀÌ ÀÖ´Ù.
+ì´ëŸ¬í•œ ë¬¸ì œë¥¼ ì ê·¹ì ìœ¼ë¡œ í•´ê²°í•˜ê¸°ìœ„í•´ SOLIDì˜ ì˜ì¡´ ì—­ì „ì˜ ì›ì¹™ì´ ìžˆë‹¤.
 
 ---
-Ä¸½¶È­
+ìº¡ìŠí™”
 ---
-À¯»çÄÚµå¸¦ ÅëÇØ ÀýÀÚÄ¡ÇâÀû ¹æ½ÄÀ¸·Î ¼³°èµÈ ÇÁ·Î±×·¥À» È®ÀÎÇØº¸ÀÚ.
+ìœ ì‚¬ì½”ë“œë¥¼ í†µí•´ ì ˆìžì¹˜í–¥ì  ë°©ì‹ìœ¼ë¡œ ì„¤ê³„ëœ í”„ë¡œê·¸ëž¨ì„ í™•ì¸í•´ë³´ìž.
 
-È¸¿øÀÇ ¼­ºñ½º ¸¸·á³¯Â¥¿¡µû¶ó ¼­ºñ½º Á¦°ø¿©ºÎ¸¦ °áÁ¤Áþ´Â ÇÁ·Î±×·¥ÀÌ ÀÖ´Ù.
+íšŒì›ì˜ ì„œë¹„ìŠ¤ ë§Œë£Œë‚ ì§œì—ë”°ë¼ ì„œë¹„ìŠ¤ ì œê³µì—¬ë¶€ë¥¼ ê²°ì •ì§“ëŠ” í”„ë¡œê·¸ëž¨ì´ ìžˆë‹¤.
 
 ```java
     class Member{
@@ -199,67 +199,67 @@ BlackJackGame Å¬·¡½º´Â Player¿Í Dealer CardDeck °´Ã¼¸¦ »ý¼ºÇØ »ç¿ëÇÏ°í ÀÖ´Ù.
         }
     }
 ```
-È¸¿ø µµ¸ÞÀÎÀ» »ç¿ëÇÏ´Â ´Ù¸¥ °´Ã¼´Â ¼­ºñ½º°¡ È®ÀåµÇ¾î°¨¿¡µû¶ó Áõ°¡ÇÒ °ÍÀÌ´Ù.
+íšŒì› ë„ë©”ì¸ì„ ì‚¬ìš©í•˜ëŠ” ë‹¤ë¥¸ ê°ì²´ëŠ” ì„œë¹„ìŠ¤ê°€ í™•ìž¥ë˜ì–´ê°ì—ë”°ë¼ ì¦ê°€í•  ê²ƒì´ë‹¤.
 
-´Ù¸¥ °´Ã¼´Â Memeber.getExpiryDate()¸¦ È£ÃâÇØ µ¥ÀÌÅÍ¸¦ **Á÷Á¢**ºÒ·¯¿À°ÔµÈ´Ù.
+ë‹¤ë¥¸ ê°ì²´ëŠ” Memeber.getExpiryDate()ë¥¼ í˜¸ì¶œí•´ ë°ì´í„°ë¥¼ **ì§ì ‘**ë¶ˆëŸ¬ì˜¤ê²Œëœë‹¤.
 
-´Ù½ÃÇÑ¹ø ¹Ýº¹ÇÏÀÚ¸é °´Ã¼°¡ **´Ù¸¥ °´Ã¼ÀÇ µ¥ÀÌÅÍ¸¦ Á÷Á¢ ºÒ·¯¿À°íÀÖ´Ù.**
+ë‹¤ì‹œí•œë²ˆ ë°˜ë³µí•˜ìžë©´ ê°ì²´ê°€ **ë‹¤ë¥¸ ê°ì²´ì˜ ë°ì´í„°ë¥¼ ì§ì ‘ ë¶ˆëŸ¬ì˜¤ê³ ìžˆë‹¤.**
 
-´Ù¸¥ °´Ã¼¿¡¼­ ÇØ´ç µ¥ÀÌÅÍ¸¦ ¾î¶»°Ô ÀÌ¿ëÇÏ´ÂÁö º¸ÀÚ.
+ë‹¤ë¥¸ ê°ì²´ì—ì„œ í•´ë‹¹ ë°ì´í„°ë¥¼ ì–´ë–»ê²Œ ì´ìš©í•˜ëŠ”ì§€ ë³´ìž.
 
 ```java
     if(member.getExpiryDate() != null && member.getExpiryDate().getDate < System.currentTimeMillis()>){
-        //Ã³¸®
+        //ì²˜ë¦¬
     }
 ```
 
-ÇØ´ç ÄÚµå¸¦ ¿©·¯ °´Ã¼¿¡¼­ °¢ÀÚ°¡ »ç¿ëÇÏ°í ÀÖÀ» °ÍÀÌ´Ù(ÄÚµåÀÇ Áßº¹ ¹ß»ý). ÀÌ ¶§ ¼­ºñ½º ¿ä±¸»çÇ×ÀÌ º¯°æµÇ¾î ¸¸·á³¯ÀÌ 30ÀÏÀÌ Áö³ªÁö¾Ê¾Ò´Ù¸é ¼­ºñ½º¸¦ °è¼Ó Á¦°øÇÑ´Ù´Â Á¤Ã¥ÀÌ ¼ö¸³µÇ¾î ¼­ºñ½º¿¡ ¹Ý¿µµÈ´Ù°í ÇØº¸ÀÚ.
+í•´ë‹¹ ì½”ë“œë¥¼ ì—¬ëŸ¬ ê°ì²´ì—ì„œ ê°ìžê°€ ì‚¬ìš©í•˜ê³  ìžˆì„ ê²ƒì´ë‹¤(ì½”ë“œì˜ ì¤‘ë³µ ë°œìƒ). ì´ ë•Œ ì„œë¹„ìŠ¤ ìš”êµ¬ì‚¬í•­ì´ ë³€ê²½ë˜ì–´ ë§Œë£Œë‚ ì´ 30ì¼ì´ ì§€ë‚˜ì§€ì•Šì•˜ë‹¤ë©´ ì„œë¹„ìŠ¤ë¥¼ ê³„ì† ì œê³µí•œë‹¤ëŠ” ì •ì±…ì´ ìˆ˜ë¦½ë˜ì–´ ì„œë¹„ìŠ¤ì— ë°˜ì˜ëœë‹¤ê³  í•´ë³´ìž.
 
-À§ ¸Þ¼­µå¸¦ »ç¿ëÇÏ´Â ¸ðµç °´Ã¼´Â ¼öÁ¤µÇ¾î¾ßÇÑ´Ù. 100°³ÀÇ °´Ã¼°¡ »ç¿ëÁßÀÌ¶ó¸é 100°³ÀÇ °´Ã¼ ¸ðµÎ Ã£¾Æ ¼öÁ¤ÇØ¾ßÇÑ´Ù.
+ìœ„ ë©”ì„œë“œë¥¼ ì‚¬ìš©í•˜ëŠ” ëª¨ë“  ê°ì²´ëŠ” ìˆ˜ì •ë˜ì–´ì•¼í•œë‹¤. 100ê°œì˜ ê°ì²´ê°€ ì‚¬ìš©ì¤‘ì´ë¼ë©´ 100ê°œì˜ ê°ì²´ ëª¨ë‘ ì°¾ì•„ ìˆ˜ì •í•´ì•¼í•œë‹¤.
 
-ÇÑ ´Þ µÚ¿¡ ¿ø·¡ Á¤Ã¥´ë·Î ´Ù½Ã °¡¾ßÇÑ´Ù¸é...? ²ûÂïÇÑ °á°ú°¡ ¹ß»ýÇÑ´Ù.
+í•œ ë‹¬ ë’¤ì— ì›ëž˜ ì •ì±…ëŒ€ë¡œ ë‹¤ì‹œ ê°€ì•¼í•œë‹¤ë©´...? ë”ì°í•œ ê²°ê³¼ê°€ ë°œìƒí•œë‹¤.
 
-ÄÚµåÀÇ Áßº¹µµ Áßº¹ÀÌÁö¸¸ ÀÌ·¸°Ô µ¥ÀÌÅÍ¸¦ Á÷Á¢ °¡Á®¿À´Â ÇÁ·Î½ÃÀú¸¦ ÀÛ¼ºÇÏ°ÔµÇ¸é µ¥ÀÌÅÍÀÇ º¯°æ¿¡ À¯¿¬ÇÑ ´ëÃ³°¡ ¾î·Æ´Ù.
+ì½”ë“œì˜ ì¤‘ë³µë„ ì¤‘ë³µì´ì§€ë§Œ ì´ë ‡ê²Œ ë°ì´í„°ë¥¼ ì§ì ‘ ê°€ì ¸ì˜¤ëŠ” í”„ë¡œì‹œì €ë¥¼ ìž‘ì„±í•˜ê²Œë˜ë©´ ë°ì´í„°ì˜ ë³€ê²½ì— ìœ ì—°í•œ ëŒ€ì²˜ê°€ ì–´ë µë‹¤.
 
-½ÉÁö¾î À§¿¡¼± member.getExpiryDate().getDate ÀÌÁßÀ¸·Î °´Ã¼°¡ ÀÇÁ¸ÇÏ´Â »óÈ²±îÁö ¹ß»ýÇß´Ù.
+ì‹¬ì§€ì–´ ìœ„ì—ì„  member.getExpiryDate().getDate ì´ì¤‘ìœ¼ë¡œ ê°ì²´ê°€ ì˜ì¡´í•˜ëŠ” ìƒí™©ê¹Œì§€ ë°œìƒí–ˆë‹¤.
 
-¸¸·á³¯À» °Ë»çÇÏ´Â ÇÁ·Î½ÃÀúÀÇ Ã¥ÀÓÀÌ ´©±¸¿¡°Ô ÀÖ´ÂÁö¸¦ °í¹ÎÇØºÁ¾ßÇÑ´Ù. ´ç¿¬ÇÏ°Ôµµ member°´Ã¼¿¡°Ô ÀÌ ±â´ÉÀÇ Ã¥ÀÓÀ» Áö¿ì¸é µÈ´Ù. ±×¸®°í ´Ù¸¥ °´Ã¼´Â ÀÌ ±â´ÉÀ» »ç¿ë¸¸ ÇÏ±â¸¸ÇÏ¸é »õ·Î¿î Á¤Ã¥º¯È­°¡ »ý±â¸é ÇØ´ç Ã¥ÀÓÀ» °¡Áø °´Ã¼¸¸ ¼öÁ¤ÇÏ¸é µÉ »ÓÀÌ´Ù
-. ÀÌ °úÁ¤À» **Ä¸½¶È­**¶ó ºÎ¸¥´Ù. ³»ºÎ ±¸ÇöÀ» ¼û±â°í °´Ã¼ÀÇ ±â´É¸¸À» »ç¿ëÇÏ°Ô²ûÇÏ´Â ¹æ½ÄÀÌ´Ù.
+ë§Œë£Œë‚ ì„ ê²€ì‚¬í•˜ëŠ” í”„ë¡œì‹œì €ì˜ ì±…ìž„ì´ ëˆ„êµ¬ì—ê²Œ ìžˆëŠ”ì§€ë¥¼ ê³ ë¯¼í•´ë´ì•¼í•œë‹¤. ë‹¹ì—°í•˜ê²Œë„ memberê°ì²´ì—ê²Œ ì´ ê¸°ëŠ¥ì˜ ì±…ìž„ì„ ì§€ìš°ë©´ ëœë‹¤. ê·¸ë¦¬ê³  ë‹¤ë¥¸ ê°ì²´ëŠ” ì´ ê¸°ëŠ¥ì„ ì‚¬ìš©ë§Œ í•˜ê¸°ë§Œí•˜ë©´ ìƒˆë¡œìš´ ì •ì±…ë³€í™”ê°€ ìƒê¸°ë©´ í•´ë‹¹ ì±…ìž„ì„ ê°€ì§„ ê°ì²´ë§Œ ìˆ˜ì •í•˜ë©´ ë  ë¿ì´ë‹¤
+. ì´ ê³¼ì •ì„ **ìº¡ìŠí™”**ë¼ ë¶€ë¥¸ë‹¤. ë‚´ë¶€ êµ¬í˜„ì„ ìˆ¨ê¸°ê³  ê°ì²´ì˜ ê¸°ëŠ¥ë§Œì„ ì‚¬ìš©í•˜ê²Œë”í•˜ëŠ” ë°©ì‹ì´ë‹¤.
 
-Ã¥¿¡¼­ µ¥ÀÌÅÍ Áß½ÉÀûÀÎ ÇÁ·Î±×·¡¹ÖÀ» °íÄ¡´Âµ¥ µµ¿òÀÌ µÇ´Â µÎ°¡Áö ¹æ½ÄÀ» ¼Ò°³ÇÏ°íÀÖ´Ù.
+ì±…ì—ì„œ ë°ì´í„° ì¤‘ì‹¬ì ì¸ í”„ë¡œê·¸ëž˜ë°ì„ ê³ ì¹˜ëŠ”ë° ë„ì›€ì´ ë˜ëŠ” ë‘ê°€ì§€ ë°©ì‹ì„ ì†Œê°œí•˜ê³ ìžˆë‹¤.
 
 > Tell, Don't Ask
 
-**µ¥ÀÌÅÍ¸¦ ¹°¾îº¸Áö¸»°í ±â´ÉÀ» ½ÇÇàÇØ´Þ¶ó ¸»ÇÏ¶ó.**
+**ë°ì´í„°ë¥¼ ë¬¼ì–´ë³´ì§€ë§ê³  ê¸°ëŠ¥ì„ ì‹¤í–‰í•´ë‹¬ë¼ ë§í•˜ë¼.**
 
-µ¥ÀÌÅÍ¸¦ ÀÐ¾î¿Â´Ù´Â°ÍÀº µ¥ÀÌÅÍ¸¦ Áß½ÉÀ¸·Î ¸Þ¼­µå¸¦ ±¸ÇöÇÑ´Ù´Â ¸»ÀÌ°í, ÀÌ ¸»Àº ÀýÂ÷ÁöÇâÀû ÄÚµå¸¦ À¯µµÇÑ´Ù.
+ë°ì´í„°ë¥¼ ì½ì–´ì˜¨ë‹¤ëŠ”ê²ƒì€ ë°ì´í„°ë¥¼ ì¤‘ì‹¬ìœ¼ë¡œ ë©”ì„œë“œë¥¼ êµ¬í˜„í•œë‹¤ëŠ” ë§ì´ê³ , ì´ ë§ì€ ì ˆì°¨ì§€í–¥ì  ì½”ë“œë¥¼ ìœ ë„í•œë‹¤.
 
-> µ¥¹ÌÅ×¸£ÀÇ ¹ýÄ¢
+> ë°ë¯¸í…Œë¥´ì˜ ë²•ì¹™
 
-Tell, Don't Ask ±ÔÄ¢À» ´õ Àß µû¸£°Ô ¸¸µé¾îÁÖ´Â ±ÔÄ¢ÀÌ´Ù
+Tell, Don't Ask ê·œì¹™ì„ ë” ìž˜ ë”°ë¥´ê²Œ ë§Œë“¤ì–´ì£¼ëŠ” ê·œì¹™ì´ë‹¤
  
-1. ¸Þ¼­µå¿¡¼­ »ý¼ºÇÑ °´Ã¼ÀÇ ¸Þ¼­µå¸¸ È£Ãâ
-2. ÆÄ¶ó¹ÌÅÍ·Î ¹ÞÀº °´Ã¼ÀÇ ¸Þ¼­µå¸¸ È£Ãâ
-3. ÇÊµå·Î ÂüÁ¶ÇÏ´Â °´Ã¼ÀÇ ¸Þ¼­µå¸¸ È£Ãâ
+1. ë©”ì„œë“œì—ì„œ ìƒì„±í•œ ê°ì²´ì˜ ë©”ì„œë“œë§Œ í˜¸ì¶œ
+2. íŒŒë¼ë¯¸í„°ë¡œ ë°›ì€ ê°ì²´ì˜ ë©”ì„œë“œë§Œ í˜¸ì¶œ
+3. í•„ë“œë¡œ ì°¸ì¡°í•˜ëŠ” ê°ì²´ì˜ ë©”ì„œë“œë§Œ í˜¸ì¶œ
 
-Áï ÀÇÁ¸ÀûÀÎ »óÈ²À» ÃÖ´ëÇÑ ¸¸µéÁö ¸»¶ó´Â °ÍÀÌ´Ù.
+ì¦‰ ì˜ì¡´ì ì¸ ìƒí™©ì„ ìµœëŒ€í•œ ë§Œë“¤ì§€ ë§ë¼ëŠ” ê²ƒì´ë‹¤.
 
 ```java
 member.getExpiryDate().getDate()
 ```
-À§¿¡¼­ ÀÌ·ç¾îÁö´Â È£ÃâÀº member°´Ã¼ÀÇ getExpiryDate()¸¦ È£ÃâÇØ Date°´Ã¼ÀÇ getDate¸Þ¼­µå¸¦ È£ÃâÇÏ°íÀÖ´Ù.
+ìœ„ì—ì„œ ì´ë£¨ì–´ì§€ëŠ” í˜¸ì¶œì€ memberê°ì²´ì˜ getExpiryDate()ë¥¼ í˜¸ì¶œí•´ Dateê°ì²´ì˜ getDateë©”ì„œë“œë¥¼ í˜¸ì¶œí•˜ê³ ìžˆë‹¤.
 
-µ¥¹ÌÅ×¸£¹ýÄ¢À» À§¹ÝÇß´Ù. ³Ñ°Ü¹ÞÀº °´Ã¼ÀÇ ¶Ç ´Ù¸¥ °´Ã¼¸¦ ÂüÁ¶ÇØ ¸Þ¼­µå¸¦ È£ÃâÇß±â¶§¹®ÀÌ´Ù.
+ë°ë¯¸í…Œë¥´ë²•ì¹™ì„ ìœ„ë°˜í–ˆë‹¤. ë„˜ê²¨ë°›ì€ ê°ì²´ì˜ ë˜ ë‹¤ë¥¸ ê°ì²´ë¥¼ ì°¸ì¡°í•´ ë©”ì„œë“œë¥¼ í˜¸ì¶œí–ˆê¸°ë•Œë¬¸ì´ë‹¤.
 
 ---
-°´Ã¼ ÁöÇâ ¼³°è °úÁ¤
+ê°ì²´ ì§€í–¥ ì„¤ê³„ ê³¼ì •
 ---
-Áö±Ý±îÁö °´Ã¼¶õ ¹«¾ùÀÎÁö, Ã¥ÀÓ¼ÒÀç ±ÔÁ¤, ÀÇÁ¸¼º, Ä¸½¶È­¸¦ ¾Ë¾Æº¸¾Ò´Ù. °£´ÜÇÏ°Ô Á¤¸®ÇØº¸ÀÚ.
+ì§€ê¸ˆê¹Œì§€ ê°ì²´ëž€ ë¬´ì—‡ì¸ì§€, ì±…ìž„ì†Œìž¬ ê·œì •, ì˜ì¡´ì„±, ìº¡ìŠí™”ë¥¼ ì•Œì•„ë³´ì•˜ë‹¤. ê°„ë‹¨í•˜ê²Œ ì •ë¦¬í•´ë³´ìž.
 
-°´Ã¼´Â ÃÖ¼ÒÇÑÀÇ Ã¥ÀÓÀ» °®°í ±â´É¸¸À» Á¦°øÇØ¾ßÇÑ´Ù.
+ê°ì²´ëŠ” ìµœì†Œí•œì˜ ì±…ìž„ì„ ê°–ê³  ê¸°ëŠ¥ë§Œì„ ì œê³µí•´ì•¼í•œë‹¤.
 
-±â´ÉÀº ÃÖ´ëÇÑ Ä¸½¶È­ÇÑ´Ù.
+ê¸°ëŠ¥ì€ ìµœëŒ€í•œ ìº¡ìŠí™”í•œë‹¤.
 
-°´Ã¼°£ÀÇ ¸Þ½ÃÁö¸¦ ¾î¶»°Ô ÁÖ°í¹ÞÀ» Áö °áÁ¤ÇÑ´Ù.
+ê°ì²´ê°„ì˜ ë©”ì‹œì§€ë¥¼ ì–´ë–»ê²Œ ì£¼ê³ ë°›ì„ ì§€ ê²°ì •í•œë‹¤.
 
-À§ °úÁ¤À» °è¼ÓÇØ¼­ ¹Ýº¹ÇÏ¸ç Á¡Â÷ ÀýÂ÷ÁöÇâÀûÀÎ ¼³°è·Î º¯È­µÇ¾î°¡¾ßÇÑ´Ù.
+ìœ„ ê³¼ì •ì„ ê³„ì†í•´ì„œ ë°˜ë³µí•˜ë©° ì ì°¨ ì ˆì°¨ì§€í–¥ì ì¸ ì„¤ê³„ë¡œ ë³€í™”ë˜ì–´ê°€ì•¼í•œë‹¤.
