--- a/BookReview/객체지향과 디자인패턴/객체지향과 디자인패턴.md
+++ b/BookReview/객체지향과 디자인패턴/객체지향과 디자인패턴.md
@@ -543,6 +543,379 @@ SOLID
 단일책임원칙 ( Single responsibility principle )
 ---
 
+단일책임원칙이란 객체지향프로그래밍에서 매우 중요한 역할을 담당하고있다.
+
+하나의 객체는 오직 하나의 책임만을 가져야하는 원칙이다.
+--
+
+```java
+public class Dataviewer {
+    public void display() {
+    String data = loadHtml();
+    updateGui(data);
+}
+
+public String loadHtml() {
+    HttpClient client = new HttpClient ();
+    client.connect (url);
+    return client.getResponse ();
+}
+
+private void updateGui (String data) {
+    GuiData guiModel = parseDataToGuiData(data);
+    tableUl.changeData(guiModel);
+    private GuiData parseDataToGuiData (String data) {
+        //
+        }
+    }
+}
+```
+
+- 문제점 첫 번째 : 수정해야하는 양이 증가한다. (변화의 양이 증가)
+    --
+
+위 코드는 Html데이터를 읽어와 GUI로 변환하여 데이터를 화면에 보여주는 역할을 담당하고있다.
+
+만약 이 경우에 데이터를 읽어오는 방식이 http에서 소켓 방식으로 변경되어서 String타입 대신 byte타입으로 변환되었다. 그렇다면 loadHtml, updateGui, parseDataToGuiData메서드가 변경되어야한다.
+
+**이렇게 한 객체가 여러 책임을 가지고있으면 변화가 발생할 때 마다 수정의 양을 증가시킨다.**
+
+- 문제점 두 번째 : 재사용이 어려워진다.
+    --
+
+또 다른 문제점은 재사용을 어렵게한다는 점이다.
+
+데이터를 읽어오는 기능이 필요한 클래스를 새로 만들어야한다는 요구가 있을 때 해당 클래스는 DataViewr클래스를 재사용해야하는데 이 때 필요하지않은 기능마저 포함되어있어 재사용 원칙(상속원칙 IS-A)을 위반하게된다.
+
+해결은?
+--
+
+데이터를 읽어오는 책임과 데이터를 보여주는 책임을 분리함으로써 데이터를 읽어오는 로직에대한 변화는 한 객체에서만 수정하도록 해야한다.
+
+또한 data타입의 변화는 추상화시켜 좀 더 유연하게 만들 수 있다.
+
+단일책임원칙은 변화에대한 것이라 할 수 있다. 변화가 생겼을 때 문제가 발생한다는 것은 객체의 책임소재가 분명하지 않은 것이다.
+
+프로그래머가 모든 변화를 예측하고 설계시작부터 단일책임원칙을 지키기위해선 많은 경험이 필요하다.
+
+하지만 이 원칙을 지키기위한 좋은 방법이 있다.
+
+클래스의 메서드를 실행하는 것이 누구인지 확인한다.
+--
+
+DataViewer의 메서드를 이용하는 다른 클래스를 가정해보는 것이다.
+
+서로 책임이 다른 두 클래스가 있다고 생각해보자. A라는 클래스는 display메서드를 이용하고 B라는 클래스는 loadData메서드를 이용해야한다면 역으로 생각하면 DataViewer는 두 책임을 동시에 가지게된다.
+
+이런 경우에 책임의 분리를 생각할 수 있다.
+
+---
+개방 폐쇄 원칙 (Open-close principle)
+--
+
+개방 폐쇄 원칙 : 확장에는 열려 있어야 하고, 변경에는 닫혀 있어야 한다.
+--
+
+    FlowController ---- > ByteSource< Interface >
+
+    ByteSource< Interface > <---- FileByteSource (implements)
+
+    ByteSource< Interface > <---- SocketByteSource (implements)
+
+위 와같이 Byte단위의 데이터를 읽어올때 ByteSource 인터페이스로 추상화하여 확장에는 열려있고 변경에는 닫혀있다.
+
+만약 MemoryByteSource를 읽어와야한다는 요구가 생기면 ByteSource를 구현하면된다(확장에 열림). 이 구현이 FlowController나 다른 클래스에 영향을 미치지않게 된다. (변경에 닫힘)
+
+공통부분을 인터페이스로 도출하는 위 방법 외에도 상속을 통해 기능을 확장해나가는 방법도 있다.
+
+상위클래스의 메서드를 상속받아 필요한 메서드를 오버라이딩하여 상위클래스에는 변경에 닫혀있고 새로운 기능을 추가하여 확장에 열려있게된다.
+
+**개방폐쇄원칙은 기본적으로 추상화와 다형성을 이용하므로** 추상화와 다형성을 어긴다면 개방폐쇄원칙을 지키지 못하게될 가능성이 높다.
+
+개방폐쇄원칙을 어기는 전형적인 특징을 알아보자.
+
+- 문제점 첫 번째 : 다운 캐스팅
+    --
+
+게임개발을 하는 경우에 Player Enemy Missile 클래스는 각자 이동경로를 그리는 메서드가 공통적으로 존재한다고 가정해보자.
+
+클래스의 공통사항을 발견해서 추상화를 이용해 Character라는 상위클래스를 만들고 draw라는 메서드를 추가했다. 하위 클래스에선 이 메서드를 오버라이딩하여 사용할 것이다.
+
+이 때 특정타입인 경우에 다른 메서드를 호출하도록 구현해야한다면 다운캐스팅을 이용해 특정 메서드를 실행하도록 개발하게된다.
+
+```java
+public void drawCharacter(Character character){
+    if (character instanceof Missile){
+    Missile missile = (Missile) character; // 다운 캐스팅
+    missile.drawSpecific();
+    }else{
+        character.draw();
+    }
+}
+```
+만약 다른클래스도 타입검사를 통해 다른 메서드를 실행해야한다면 다운캐스팅후에 메서드를 호출해야하는데 이렇게되면 drawCharacter에 지속적인 변화가 일어나게된다.
+
+확장이 변화를 일으키게되는 것이다.
+
+일반적으로 instanceof 같은 타입 확인 연산자는 개방폐쇄원칙을 지키지 못하게할 가능성이 높다.
+
+특정타입에만 국한해서 다른 메서드를 호출하도록 만들어진다는것 자체가 변화를 유발하기때문이다.
+
+- 문제점 두 번째 : 비슷한 if-else블록이 존재
+    --
+
+```java
+public class Enemy extends Character {
+    private int pathPattern;
+    public Enemy (int pathPattern){}
+        this.pathPattern = pathPattern;
+    }
+    public void draw() {
+    if (pathPattern == 1) {
+    × += 4;
+    } else if (pathPattern == 2) {
+    y += 10;
+    } else if (pathPattern == 4) {
+    × += 4;
+    y += 10;
+    }
+    }      
+```
+
+Enemy클래스의 이동경로를 그리는 메서드에서 if-else문이 비슷한 형태로 존재한다.
+
+만일 새로운 이동경로가 추가되어야한다면 draw는 확장에 영향을 받게된다.
+
+이때 이동경로 pathPattern을 추상화해서 draw가 확장에는 열려있고 변경에는 닫혀있는 상태로 만들 수 있다.
+
+```java
+public class Enemy extends Character {
+    private PathPattern pathPattern;
+    public Enemy (PathPattern pathPattern) {
+        this.pathPattern = pathPattern;
+    }
+    public void draw() {
+        int × = pathPattern.nextX();
+        int y = pathPattern.nextY();
+    }
+}
+```
+pathPattern을 추상화하면 새로운 경로가 생기더라도 pathPattern을 확장하면 Enemy의 draw()는 변경에 닫혀있게된다.
+
+개방폐쇄원칙은 변화가 예상되는 것을 추상화하여 다형성을 이용한 변경의 유연함을 얻도록해준다.
+---
+
+---
+
+리스코프 치환 원칙 (Liskov Substitution Principle)
+--
+
+리스코프 치환 원칙은 개방 폐쇄 원칙의 다형성을 지키기위한 중요한 원칙이다.
+
+리스코프 치환 원칙을 지키지못하면 개방 폐쇄 원칙도 지키지 못하게되므로 반드시 지켜야한다.
+
+- 상위타입의 객체를 하위타입의 객체로 치환해도 상위 타입을 사용하는 프로그램은 정상적으로 작동해야한다.
+    ---
+
+이 원칙을 지키지않을 때 발생하는 문제에대해 유명한 직사각형-정사각형 문제가있다.
+
+```java
+public class Rectangle {
+  private int width;
+  private int height;
+
+  public void setWidth(int width) {
+    this.width = width;
+  }
+
+  public void setHeight(int height) {
+    this.height = height;
+  }
+
+  public void getWidth() {
+    return width;
+  }
+
+  public void getHeight() {
+    return height;
+  }
+}
+
+public class Square extends Rectangle {
+  @Override
+  public void setWidth(int width) {
+    super.setWidth(widht);
+    super.setHeight(widht);
+  }
+  @Override
+  public void setHeight(int height) {
+    super.setWidth(height);
+    super.setHeight(height);
+  }
+}
+```
+
+Square 클래스는 Rectangle클래스의 특수한 경우로 보고 상속받고있다.
+
+```java
+public void increaseHeight(Rectangle rec) {
+  if(rec.getHeight() <= rec.getWidth()) {
+    rec.setHeight(rec.getWidth() + 10);
+  }
+}
+```
+
+위 메서드에서는 세로가 가로보다 작거나 같으면 세로의 길이를 가로길이+10으로 증가시켜준다.
+
+만약 이 경우에 Squre 인스턴스가 들어온다면 예상한 세로의길이와 가로의길이가 같아지는 상황이 생긴다.
+
+**하위타입으로 치환하자 상위타입을 사용하는 프로그램에 문제가 생긴것이다.**
+
+개념적으론 정사각형은 직사각형의 특수한 경우로 상속관계처럼 보일지라도 실제 프로그래밍관점에선 상속 관계가 아닐 수 있다는 것을 보여준다.
+
+해결방법은 두 클래스를 따로 분리하고 Shape이라는 클래스를 상속받도록 구현하면 해결된다.
+
+- 상위 타입에서 지정한 리턴 값의 범위에 해당되지 않는 값을 리턴한다.
+    --
+
+이 문제도 리스코프 치환 원칙을 위배한다.
+
+```java
+public class CopyUtil {
+  public static void copy(InputStream is, OutputStream out) {
+    byte[] data = new byte[512];
+    int len = -1;
+
+    // InputStream.read() 메서드는 스트림의 끝에 도달하면 -1을 리턴
+    while((len = is.read(data)) != -1) {
+      out.write(data, 0, len);
+    }
+  }
+}
+public class SatanInputStream implements InputStream {
+  public int read(byte[] data) {
+    ...
+    return 0; // 데이터가 없을 때 0을 리턴하도록 구현
+  }
+}
+```
+InputStream은 스트림의 끝에 도달하면 -1을 리턴하도록 정해져있다.
+
+하지만 InputStream을 확장해서 구현하는 경우에 위처럼 0을 리턴하도록 구현하게되면 out.write메서드가 정상적으로 작동하지않는다.
+
+즉 상위타입의 "규약"을 지키며 확장해야한다. 이 예시에서도 명심할 사항은 상위타입이 하위타입으로 바뀐다고해서 프로그램에 이상이 생겨서는 안된다는 것이다.
+
+---
+
+인터페이스 분리 원칙(Interface Segreagation Principle)
+---
+
+- 인터페이스는 그 인터페이스를 사용하는 클라이언트를 기준으로 분리해야한다.
+
+인터페이스 분리 원칙은 단일 책임 원칙과 유사하다. 단일 책임 원칙의 인터페이스 버전이라고 생각하면 편하다.
+
+인터페이스도 객체와 마찬가지로 최소한의 책임을 갖고있어야한다.
+
+A B C 클래스가 D라는 인터페이스를 구현(의존)하는 상황이 있다고 가정하자.
+
+하지만 A B C에서 공통적인 부분을 인터페이스로 도출해낸것이 아니라 단순하게 A B C의 기능을 추상화하여 각 클래스가 사용하지도 않는 기능을 인터페이스가 포괄적으로 포함하고있다면 인터페이스 분리 원칙을 어기게된다.
+
+또한 A의 메서드시그니처 변경이 인터페이스에게 영향을 미치고 그 영향이 다시 B와 C에 영향을 미칠 수 있기때문에 인터페이스를 사용자입장에서(A B C 입장에서) 분리해내야한다. 
+
+인터페이스 분리 원칙은 재사용성과도 관련이 있다.
+
+위 예시에서 A B C는 D인터페이스에 포함된 기능중에 사용하지 않는 기능이 존재하고 만약 D인터페이스를 구현할 다른 클래스의 요구사항이 발생한다면 해당 클래스 또한 필요없는 기능을 갖게되므로 상속의 원칙에 어긋난다.
+
+---
+
+의존 역전 원칙 (Dependency inversion principle)
+---
+
+- 의존 역전 원칙이란 고수준 모듈은 저수준 모듈의 구현에 의존해서는 안되며 저수준 모듈이 고수준 모듈에서 정의한 추상타입에 의존해야한다.
+    --
+
+고수준 모듈과 저수준 모듈에대해서 먼저 알아보자.
+
+![img](/BookReview/%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5%EA%B3%BC%20%EB%94%94%EC%9E%90%EC%9D%B8%ED%8C%A8%ED%84%B4/IMG18.png)
+
+앞서 살펴본 암호화 예시에서 고수준은 FlowController에 해당하고 저수준은 각각의 하위기능들을 구현한 클래스에 해당한다.
+
+그렇다면 고수준이 저수준에 의존한다는 것은 무슨의미일까.
+
+FlowController가 FileDataReader를 조립해서 사용하고 있을 경우에 해당한다. 이 경우 새로운 요구사항이 생기면 (다른 방식으로 데이터읽기를 원함) 새로운 클래스가 추가되고 FlowController는 변경이 불가피하다. (개방 폐쇄 원칙을 지킬 수 없음)
+
+그래서 고수준이 저수준에 의존해서는 안되고 고수준에서 정의한 추상타입을 저수준이 의존해야한다.
+
+고수준모듈(FileController)에서 새로운 추상타입(ByteSource)를 도출하고 FileDataReader에선 추상타입을 상속받는다면 저수준이 고수준모듈에서 도출한 추상타입을 의존하게된다.
+
+데이터를 읽는 방식에 새로운 요구사항이 발생하면 추상타입을 상속받기만하면 고수준에서는 변경이 발생하지않고 확장이 가능해진다.
+
+이렇게 고수준이 저수준을 의존하는 상황에서 저수준이 고수준을 의존하는 상황으로 바뀌는 것을 의존 역전 원칙이라한다.
+
+- 의존 역전 원칙은 타입의 소유도 역전시킨다.
+    --
+
+![img](/BookReview/%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5%EA%B3%BC%20%EB%94%94%EC%9E%90%EC%9D%B8%ED%8C%A8%ED%84%B4/assets_-LZ0r85EEFTHmLyxK8ag_-L_8qGq2xh1eDrf0nndZ_-L_8tjnR-x62XiAFQFpO_IMG22.webp)
+
+의존 역전 원칙을 적용하기 전에는 데이터를 읽어오는 클래스타입은 FileDataReader를 소유한 패키지에 있다.
+
+하지만 고수준모듈에서 추상화를 진행해 의존 역전 원칙을 적용하면 이 타입소유 역시 역전된다.
+
+![img](/BookReview/%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5%EA%B3%BC%20%EB%94%94%EC%9E%90%EC%9D%B8%ED%8C%A8%ED%84%B4/IMG23.png)
+
+이렇게 데이터 읽기 타입을 고수준에서 갖게된다.
+
+타입의 소유가 역전되면 무엇이 좋을까?
+
+만약 FileDataReader가 아닌 다른 방식의 데이터읽기가 추가된다면 독립적인 배포가 가능해진다.
+
+만약 타입이 역전되지않는다면 배포시에 필요없는 클래스까지 배포되는 상황이 발생한다.
+
+![img](/BookReview/%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5%EA%B3%BC%20%EB%94%94%EC%9E%90%EC%9D%B8%ED%8C%A8%ED%84%B4/IMG25.png)
+
+---
+
+SOLID 정리
+--
+
+SOLID 원칙을 공부하며 계속 언급되는 단어는 **변화**이다.
+
+변화에 유연하게 대응하기위해 객체의 책임, 인터페이스의 분리, 의존의 역전, 치환 원칙, 개방 폐쇄 원칙을 사용하는 것이다.
+
+단일 책임원칙과 인터페이스 분리는 모두 책임의 크기를 최소한으로 나눠 영향을 최소화한다.
+
+리스코프 치환 원칙과 의존 역전 원칙은 개방폐쇄원칙을 지원한다.
+
+개방폐쇄원칙은 변화되는 부분을 추상화하고 다형성을 이용함으로써 기존 코드의 수정은 최대한으로 줄여준다.
+
+여기서 변화되는 부분을 추상화하는 것이 의존 역전 원칙이고 다형성을 이용하게하는 것이 리스코프 치환원칙이다.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
