--- a/BookReview/객체지향과 디자인패턴/어댑터~.md
+++ b/BookReview/객체지향과 디자인패턴/어댑터~.md
@@ -304,6 +304,232 @@ Mediator의 역할이 보이는가?
 파사드패턴
 ==
 
+이번 패턴은 미디에이터와 비교한다면 중계역할을 해준다는 점에서 비슷하다고 볼 수 있다.
+
+![img](/BookReview/%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5%EA%B3%BC%20%EB%94%94%EC%9E%90%EC%9D%B8%ED%8C%A8%ED%84%B4/IMG_1984.jpg)
+
+다음과같이 직원의 이력, 평가정보, 기본 정보를 화면과 XML 엑셀로 가져오기위한 클래스 도식이 있다고 생각해보자.
+
+**서로 직접적인 의존도 의존이지만 코드의 중복도 매우 많을 것이다.**
+
+EmpDao의 변경이 3개의 클래스에 영향을 미치고 있는것이다.
+
+확장의 어려움은 말할 것도 없이 어렵다. 하나의 클래스 추가는 3개의 클래스에 코드를 추가해야만한다.
+
+이젠 보지않아도 알 수 있다. 정답은 추상화다.
+--
+
+![img](/BookReview/%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5%EA%B3%BC%20%EB%94%94%EC%9E%90%EC%9D%B8%ED%8C%A8%ED%84%B4/IMG_1985.jpg)
+
+클라이언트는 서브시스템에 의존하지않고 오직 파사드에만 의존한다.
+
+확장의 어려움도 해소됐다. EmpReportDaoFacade만 수정한다면 나머지 클라이언트는 알 필요도 알 수도 없다.
+
+Dao외에 HTTP에대한 요청까지 처리해야한다면 아래와같이 구현하면 된다.
+
+![img](/BookReview/%EA%B0%9D%EC%B2%B4%EC%A7%80%ED%96%A5%EA%B3%BC%20%EB%94%94%EC%9E%90%EC%9D%B8%ED%8C%A8%ED%84%B4/IMG_1986.jpg)
+
+파사드 2개를 만들고 하나의 파사드를 또 다시 추상화하여 설계하면 된다.
+
+사실 파사드패턴에서 확장의 어려움이 해소되기는 했지만 수정의 영향에서 완벽히 벗어날 수는 없다.
+
+파사드패턴자체가 새로운 기능이 추가되면 그에따른 기능을 추가해줘야하기때문이다. 하지만 명심하자 첫 번째 사진과같은 구현은 절대로 해서는 안된다.
+
+---
+추상 팩터리 메서드
+=
+
+다음 프로젝트에서 JDBC를 이용할것 같다.
+
+때마침 JDBC가 추상 팩터리 메서드 패턴을 이용해 구현했다길래 책의 예제보다 JDBC를 알아보며 설명하고자한다.
+
+우선 JDBC의 역할에 대해 알아보자.
+-
+
+DB의 종류는 정말 많다. 이름을 들어본 DB만해도 MySQL NoSQL(비정형) MongoDB(비정형) MariaDB Oracle 등등 있다.
+
+여기서 클라이언트의 입장이 되어 프로젝트를 한다고 생각해보자.
+
+초기엔 MySQL을 이용해 프로젝트를 진행했지만 MySQL은 소규모 프로젝트가 아니라면 비용을 지불해야한다. 하지만 MySQL과 문법도 비슷한 쌍둥이 MariaDB는 완전한 무료다.
+
+MariaDB로 교체가 과연 쉬울까?
+
+MySQL을 이용한 모든 코드를 MariaDB로 대체하기위해선 엄청난 수정이 필요할 것이다.
+
+지금까지 객체지향을 공부하며 이런 문제점은 모두 어떤 방식으로 해결했는지 생각해보면 답은 뻔하다.
+
+바로 추상화를 이용해 확장에 열려있게만들고 수정에 닫혀있게만들면 되는것이다.
+
+Java는 DB회사들에게 표준을 제시하고 이 표준에 맞춰 개발하도록 강제한 것이다.
+
+그게 바로 JDBC 이다.
+
+우선 JDBC의 구성을 살펴보자.
+-
+
+1. java.sql.Driver
+    
+    DB와 연결하는 드라이버로 이 드라이버를 인터페이스로 제공했다. 모든 DB는 이 인터페이스에 맞춰 개발해야만한다.
+    그렇다면 사용자는 하나의 DB에 국한되지않고 개발할 수 있는 것이다.
+
+2. java.sql.Connection
+
+    데이터베이스와 연결을 담당한다. 드라이버 메니져로부터 Connection 객체를 가져온다.
+
+3. java.sql.Statement
+
+    쿼리를 DB날릴 방법을 정의해놓았다.
+
+4. java.sql.ResultSet
+
+    SELECT 구문의 실행결과를 조회할 방법을 정의해놓았다.
+
+이 외에도 더 있지만 일단 핵심적인 인터페이스들은 위와같다.
+
+MySQL의 입장에서 본다면 위 인터페이스를 모두 MySQL에 맞춰서 구현해줘야한다.
+
+위 인터페이스를 Factory Method Pattern이라고 한다. 직역하자면 공장이라는 의미인데 여기서 공장이란 제품(객체)을 생성해주는 공장이라고 생각하면 쉽다.
+--
+
+하지만 세부적인 제품(객체)는 DB회사마다 다르니 각각의 콘크리트 팩터리가 객체를 제공하게된다.
+
+MariaDB라면 ? 아무 문제가 없다. 구현만 해주면 된다.
+
+추상팩터리메서드의 장점이 JDBC에서 확연히 들어난다.
+
+구체적인 구현은 각 DB회사에 맡긴다. 하지만 전체적인 틀은 JDBC에 맞춰야하는 것이다.
+
+정리하자면 추상팩터리메서드는 객체생성 공장이라고 생각하면된다. 이 때 객체의 생성은 콘크리트팩터리에서 생성하고 클라이언트입장에선 어떤 코드도 수정하지않고 콘크리트클래스만 교체하면 된다.
+
+---
+
+컴포지트 패턴
+=
+
+우선 컴포지트 패턴의 가장 좋은 예시가 있다.
+
+바로 디렉토리-파일 구조인데 폴더안에 파일이있고 또 다른 폴더가 있을 수 있고 또 다른 여러파일이 안에 들어있을 수 있다.
+
+그렇다 ! Tree 구조를 연상하게된다.
+
+![img](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F99E9FF455C84AF1E20)
+
+Leaf는 위에서 파일에 Composite는 폴더에 해당한다고 생각하면 된다.
+
+여기서 중요한 점은 Composite도 Leaf와 마찬가지로 Component를 구현하기때문에 이 객체 자체로 Component가 된다.
+
+폴더가 여러 파일을 가지고있더라도 하나의 파일로 다뤄지는것과 같은 의미이다.
+
+객체지향적으로 중요한 부분은 Client가 인터페이스를 사용한다는 점이고 또 다른점은 Composite가 자신이 구현하고있는 인터페이스를 자식으로 가진다는 것이다.
+
+![img](https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Ft1.daumcdn.net%2Fcfile%2Ftistory%2F9923A84E5C84B5203A)
+
+위와 같이 트리구조를 가지게된다.
+
+자세히보면 Composite 자신을 자식으로 가지는 것을 볼 수 있는데 위에서 설명했듯이 자신이 구현한 인터페이스를 자식으로 가지기때문에 가능한 것이다.
+
+```java
+//Component
+interface Directory{
+    public void print();
+}
+
+class File{
+    @Override
+    public void print("File");
+}
+
+class CompositeDirectory implements Directory{
+    //Collection of child graphics.
+    private List<Directory> childGraphics = new ArrayList<Directory>();
+    public void print() {
+        for (Directory directory : childDirectory) {
+            directory.print();  //Delegation
+        }
+    }
+    public void add(Directory directory) {
+        childDirectory.add(directory);
+    }
+    public void remove(Directory directory) {
+        childDirectory.remove(directory);
+    }
+}
+```
+
+CompositeDirectory는 내부에 Directory(interface)타입의 리스트를 가지게된다. 이렇기때문에 자기자신을 리스트에 넣을 수 있는 것이다.
+
+add와 remove를 통해서 객체(File이나 Directory)를 추가하고 print 메서드는 for loop를 돌며 기능을 자신의 자식에게 위임하고있다.
+
+어디서 많이 본 듯한 구조인데 옵저버패턴에서 주제객체의 역할과 비슷하다.
+
+그럼 Client는 어떻게 사용할까?
+
+정말 단순하다. 만들고싶은 파일이나 폴더의 개수에따라 add와 remove를 통해 구조를 만들어주면 된다.
+
+그런데 생각해봐야할 점이 하나 생겼다.
+--
+
+지금까지 책에서 줄기차게 주창한 내용은 클라이언트는 내부 구현을 모르게끔 인터페이스를 이용하지 않았던가?
+
+그런데 CompositeDirectory라는 객체에 Client가 직접접근해야지만 add 와 remove를 사용할 수 있다는 점이다.
+
+책에서 그동안 가장 경계했던 내용중 하나이다.
+
+이 문제는 해결방법이 있긴하다. Component 인터페이스에 add 와 remove를 정의하는 방법인데 이렇게되면 File클래스도 add 와 remove를 정의해야하는 문제가 발생한다.
+
+애초에 File클래스에게 그런 기능은 필요하지도 않고 논리적으로 맞지않다.
+
+파일객체가 다른 파일이나 폴더를 지우고 생성하는 일은 부여하지않은 일이다.
+
+그렇다면 정의할 메서드에 예외를 던지거나 빈 구현을 할 수는 있다. 또 인터페이스에 구현이 가능한 객체인지를 판단하는 메서드를 통해 검증 후 추가하는 방식도 가능하다.
+
+타입의 안전성을 고려할 것인가 객체지향의 DIP를 지킬 것인가 고민해봐야할 문제이다.
+--
+
+---
+널 객체 패턴
+=
+NullPointerException에 허우적거려본 경험이 있다.
+
+널을 반환하기때문에 발생하는 이 문제점을 매우 단순하게 '그럼 널을 반환하지 않도록하면 되는거아닌가?' 라고 생각하고 접근해보자.
+
+```java
+SpecialDiscount specialDiscount = specialDiscountFactory.create(customer);
+
+if(specialDiscount != null){
+    specialDiscount.addDetailTo(bill);
+    }
+```
+
+이렇게 null검사를 통해 null에대한 안전성을 확보할 수 있다는게 내가 알고있는 점이였다.
+
+그런데... 만약 null검사를 해야하는 코드가 많다면 이 모든 코드에대해 null체크를 해야하는데 실수라도 빼먹는다면 아주 큰 문제가 발생할 것이다.
+
+null 객체 패턴의 핵심은 null을 리턴하지않고 null을 대체할 클래스를 리턴한다.
+-
+
+```java
+public class NullSpecialDiscount extends SpecialDiscount{
+    @Override
+    public void addDetailTo(Bill bill){
+        //DoNotSomething
+    }
+}
+```
+
+Special 객체에서 null을 리턴하는 대신 위 클래스를 대신 리턴하도록 하면 된다.
+
+더이상은 널체크를 필요로하지않게되고 예외에대한 두려움이 없어진다!
+
+
+
+
+
+
+
+
+
+
 
 
 
