--- a/BookReview/데이터베이스 첫걸음/2,3.md
+++ b/BookReview/데이터베이스 첫걸음/2,3.md
@@ -87,4 +87,47 @@ RedHat (OS) ---> PostgreSQL ---> App
 
 AWS가 아주 적절한 예시가 될 수 있다. 초기엔 비용을 지불하지않지만 사용해야하는 서비스의 양이 증가하거나 더 큰 용량이 필요하다면 비용을 지불해야한다.
 
+4장
+=
+
+- ## stand-alone
+  인터넷 네트워크에 접속하지 않고 독립된 구성으로 물리적으로 접근해서 이용해야한다.
+
+- ## 클러스터링
+  동일한 기능의 컴포넌트를 병렬화한다. DB서버 장애예방을 위해 DB서버를 병렬로 증가시키는 것을 말한다.
+  - ### Shared Disk 
+      실제 저장소는 단 1개만 사용하고 모든 DB서버가 공유한다. (병목현상 발생가능)
+
+    - #### Active-Active 
+      병렬로 증가시킨 서버를 모두 동시에 가동시킨다. (병목현상 발생가능)
+
+    - #### Active-Standby 
+      하나의 DB서버만 가동시키고 나머지는 대기한다. (대기하는 서버와 가동되는 서버간의 동기화문제가 발생)
+
+      - ##### Hot-Standby 
+        여러 서버를 가동하지만 실제 이용은 한개의 서버로 비용의 문제가 있음
+
+      - ##### Cold-Standby
+         평소에는 StandbyDB가 가동되지않고 가동중인 서버가 죽었을경우 가동(StandbyDB가 가동되는데 시간이 걸림)
+  - ### Shared Nothing
+    서버와 저장소를 한 세트로 구성해 이 세트를 증가시킨다. (병렬처리로 성능이 선형으로 향상)
+    하지만 DB서버들은 각자의 저장소가 아닌 저장소에는 액세스할 수 없다.
+    [구글이 개발한 샤딩이 이 구조]
+
+5장
+=
+## 관계형 데이터베이스으이 계층
+
+### 최상위 : 인스턴스 (서버의 개념)
+
+### 데이터베이스 : 스키마와 스키마에 존재하는 복수 이상의 테이블을 가지는 개념적 단위
+
+### 스키마 : 복수 이상의 테이블을 가지는 하나의 틀
+
+MySQL을 조금은 알고있지만 스키마라는 단어를 들어보지 못했다.
+
+그래서 뭔가 놓치며 공부를 한게아닌게 했지만 MySQL은 3계층 구조를 택하고있어 데이터베이스와 스키마가 같은 개념이다.
+
+PostgreSQL이 4계층구조로 데이터베이스와 스키마가 구분되어있다.
+
 
