--- a/BookReview/TDD/18.md
+++ b/BookReview/TDD/18.md
@@ -123,7 +123,7 @@ class TestCaseTest(TestCase):
         test=WasRun("testMethod")
         # test.wasRun이 None이면 assert가 참
         assert(not test.wasRun)
-        test.run
+        test.run()
         # test.wasRun이 1이면 참
         assert(test.wasRun)
 TestCaseTest("testRunning").run()
@@ -134,4 +134,340 @@ TestCaseTest("testRunning").run()
 어떻게 해야 컴파일에러가 발생하지않는지 알지만 일단은 스텁구현을 하나하나해가면서 컴파일에러를 해결해냈다.
 
 켄트벡도 TDD마스터라면 이런 작은 단계로 TDD를 하지않아도 된다고하지만 아직 TDD마스터가 아니기때문에 작은단계로 진행하자...
+
+19장 테이블 차리기 
+=
+테스트의 패턴
+
+1. 준비 : 객체를 생성 (arrange)
+2. 행동 : 자극을 줌 (act)
+3. 확인 : 결과를 검사 (assert)
+
+테스트에서 자주 마주치는 것은 1번은 항상 같지만 2,3번은 항상 달라질 수 있다는 점이다.
+
+7이라는 객체와 9라는 객체를 준비하고 7과9에 더하는 자극 곱하는 자극 나누는 자극 등 여러 자극을 주면 결과는 항상 달라진다.
+
+여기서 트레이드오프관계가 존재하는데 바로 성능과 격리다.
+
+성능면에서 객체 하나로 모든 테스트가 사용하도록 하고싶지만 격리면에서는 하나의 객체에 문제가 생기면 그 객체를 사용하는 모든 테스트코드가 망가질 수 있다.
+
+### 켄트백은 테스트 커플링, 즉 테스트가 서로 얽혀있는 상황을 만들지 말라고한다.
+
+우리의 상황으로 들여다보자. (18장 코드) 
+```python
+class TestCaseTest(TestCase):
+    def testRunning(self):
+        test=WasRun("testMethod")
+        # test.wasRun이 None이면 assert가 참
+        assert(not test.wasRun)
+        test.run()
+        # test.wasRun이 1이면 참
+        assert(test.wasRun)
+TestCaseTest("testRunning").run()
+```
+WasRun클래스에는 플래그가 None에서 1로 바뀌면서 테스트메서드가 실행되었음을 체크한다. 이 부분이 켄트백이말한 매번 다른 객체를 사용해야하는 상황을 말한다.
+
+이제 따라가보자.
+
+```python
+TestCaseTest
+def testSetUp(self):
+    test = WasRun("testMethod")
+    test.run()
+    assert(test.wasSetUp)
+```
+
+wasSetUp 속성이 없음으로 만들어주자.
+
+```python
+WasRun
+def setUp(self):
+    self.wasSetUp = 1
+```
+setUp은 TestCase가 할 일이다.(run호출 시 wasSetUp이 변경되어야하기때문)
+
+```python
+TestCase
+def setUp(self):
+    pass
+def run(self):
+    self.setUp()
+    method = getattr(self,self.name)
+    method()
+```
+run에서 setUp()을 호출하기때문에 run이 호출되면 wasSetUp은 1이 된다.
+
+이제 wasRun 플래그를 setUp에서 설정하도록해서 WasRun을 단순화시키자.
+
+```python
+WasRun
+def setUp(self):
+    self.wasRun = None
+    self.wasSetUp = 1
+```
+이제 테스트를 단순화할 수 있다.
+
+```python
+TestCaseTest
+    def setUp(self):
+        self.test = WasRun("testMethod")
+
+    def testRunning(self):
+        self.test.run()
+        assert (self.test.wasRun)
+
+    def testSetUp(self):
+        self.test.run()
+        assert(self.test.wasSetUp)
+```
+
+```python
+TestCaseTest("testRunning").run()
+TestCaseTest("testSetUp").run()
+```
+이제 두 메서드는 완벽히 새로운 인스턴스를 사용하여 커플링이 될 가능성이 없다.
+
+run()을 호출하면 setUp을 호출하도록 했기때문에 매번 새로운 WasRun인스턴스를 반환받기때문이다.
+
+20장
+=
+
+## setUp에서 외부자원을 할당한다면 이 자원은 테스트가 끝난뒤 반환해야한다. (testDown 호출)
+
+이제 플래그가 아닌 로그를 검사하도록 테스트 전략을 변경한다.
+
+```python
+    def setUp(self):
+        self.wasRun = None
+        # wasSetUp 제거
+        self.log = "setUp"
+```
+
+이렇게 로그를 이어 붙이면 상태를 체크할 수 있을 것이다.
+
+```python
+    def testMethod(self):
+        self.wasRun = 1
+        self.log = self.log + "testMethod"
+```
+이렇게 문자열이 이어붙으면서 setUp testMethod라는 문자열로 체크가 가능해진다.
+
+```python
+    def testSetUp(self):
+        self.test.run()
+        assert("setUp testMethod" == self.test.log)
+```
+위 테스트는 setUp과 메서드의 호출이라는 두 가지 기능을 다 담당하므로 testRunning은 필요가 없어졌음으로 지우자.
+
+```python
+    def testTemplateMethod(self):
+        test = WasRun("testMethod")
+        self.test.run()
+        assert("setUp testMethod" == self.test.log)
+```
+TestCaseTest의 setUp메서드는 이제 한가지의 테스트밖에 사용하지않음으로 다시 예전으로 되돌린다.
+
+test = WasRun("testMethod")
+
+이렇게 되돌아가는일이 켄트백은 여러번 있을 것이라 말한다. 고생해서 만들어놓은것을 중복을 제거해가며 다시 되돌아가는 일말이다.
+
+```python
+assert("setUp testMethod tearDown" == self.test.log)
+```
+
+이제 테스트코드의 위 테스크가 돌아가야한다.
+
+```python
+    def testMethod(self):
+        self.wasRun = 1
+        self.log = self.log + "testMethod "
+
+    def setUp(self):
+        self.wasRun = None
+        self.log ="setUp "
+
+    def tearDown(self):
+        self.log = self.log + "tearDown "
+```
+
+이렇게 문자열을 이어붙이면서 플래그를 사용하지않고 호출상태를 파악하는 방식으로 전략이 변경되었다.
+
+20장 1 run, 0 failed
+=
+
+## 우린 여러 테스트를 실행하고 실행결과를 보고싶다.
+
+실행결과를 기록하는 TestResult객체를 반환하게하자.
+
+먼저 테스트코드부터
+
+```py
+TestCaseTest
+    def testResult(self):
+        test = WasRun("testMethod")
+        result = test.run()
+        assert("1 run, 0 failed" == result.summary())
+```
+
+가짜 구현으로 초록막대를 보자.
+
+```py
+class TestResult:
+    def summary(self):
+        return "1 run, 0 failed"
+TestCase class
+    def run(self):
+        self.setUp()
+        method = getattr(self, self.name)
+        method()
+        self.tearDown()
+        return TestResult()
+```
+
+테스트는 성공이지만 이제 스텁구현을 구체화해야한다.
+
+```py
+class TestResult:
+    def __init__(self):
+        self.runCount = 1
+    
+    def testStarted(self):
+        self.runCount = self.runCount + 1
+```
+
+테스트가 실행될때마다 runCount를 하나씩 증가시키게만든다.
+
+```py
+    def summary(self):
+        return "%d run, 0 failed" % self.runCount
+```
+
+상수를 변수로 교체하며 하나를 리팩토링했다.
+
+```py
+    def run(self):
+        result = TestResult()
+        result.testStarted()
+        self.setUp()
+        method = getattr(self, self.name)
+        method()
+        self.tearDown()
+        return TestResult()
+```
+run이 호출되면 testStarted()를 호출한다.
+
+이젠 실패한 0을 상수가 아닌 변수로 위와 같은 방식으로 리팩토링을 해야한다.
+
+```py
+TestCaseTest
+    def testFailedResult(self):
+        test = WasRun("testBrokenMethod")
+        result = test.run()
+        assert("1 run, 1 failed" == result.summary())
+WasRun
+    def testBrokenMethod(self):
+        raise Exception
+```
+
+다음 장으로...
+
+22장 실패 처리하기
+=
+테스트가 성공했을때와는 달리 실패하면 에러를 표시하고 에러를 잡도록해야한다.
+
+```py
+        def testFailedResultFormatting(self):
+        result = TestResult()
+        result.testStarted()
+        result.testFailed()
+        assert("1 run, 1 failed" == result.summary())
+```
+
+위 결과를 기대하기위해선 summary()를 다시 손봐줘야한다.
+
+```py
+class TestResult:
+    def __init__(self):
+        self.runCount = 0
+        self.failureCount = 0
+
+    def testStarted(self):
+        self.runCount = self.runCount + 1
+        
+    def testFailed(self):
+        self.failureCount = self.failureCount + 1
+
+    def summary(self):
+        return "%d run, $d failed" % (self.runCount, self.failureCount)
+
+```
+
+저번장과 같은 방법이다.
+
+이제 메서드가 예외를 던지면 예외를 잡는쪽에서 testFailed()를 호출하면된다.
+
+```py
+    def run(self):
+        result = TestResult()
+        result.testStarted()
+        self.setUp()
+        try:
+            method = getattr(self, self.name)
+            method()
+        except:
+            result.testFailed()
+        self.tearDown()
+        return TestResult()
+```
+
+하지만 위 코드에선 문제가 있는데 setUp에서 예외가발생한다면 처리가 불가능하다. 켄트백이 손가락이 아프다며 우리에게 맡기겠다고했다...
+
+
+23장 얼마나 달콤한지
+=
+
+```py
+TestCaseTest("testTemplateMethod").run()
+TestCaseTest("testResult").run()
+TestCaseTest("testFailedResult").run()
+TestCaseTest("testFailedResultFormatting").run()
+```
+4개의 테스트를 실행하기위해 위와같이 중복된 부분이 많이 발생한다. 우리가 원하는 것은 여러 테스트를 한 번에 하길 원한다.
+
+```py
+TestCaseTest
+    def testSuite(self):
+        suite = TestSuite()
+        suite.add(WasRun("testMethod"))
+        suite.add(WasRun("testBrokenMethod"))
+        result = suite.run()
+        assert("2 run, 1 failed" == result.summary())
+
+
+class TestSuite:
+    def __init__(self):
+        self.test = []
+        
+    def add(self, test):
+        self.tests.append(test)
+
+```
+
+테스트를 리스트형에 하나씩 추가하고 이들을 순회하며 run()을 호출하라 생각이다.
+
+```py
+TestSuite
+    def run(self):
+        result = TestResult()
+        for test in self.test:
+            test.run(result)
+        return result
+```
+
+여기서 한가지 문제점이 생긴다.
+
+test.run(result) 이 코드에서 result는 같은 result를 넘기고있다. (두 테스트가 같이 다뤄지길 원하기때문)
+
+하지만 매개변수를 run에 생성하는데 문제가 있다.
+
 
