--- a/Spring/DB접근기술/1.md
+++ b/Spring/DB접근기술/1.md
@@ -62,3 +62,119 @@ JDBC 커넥션에 관한 설정을 abstract 클래스로 생성해 따로 들고
 애플리케이션 스레드로 커넥션을 얻는다면 TCP/IP 연결 성공 까지 계속 대기해야하기 때문에 스프링이 뜨는 시간이 오래걸림.
 
 https://github.com/brettwooldridge/HikariCP [공식문서]
+
+## 트랜잭션의 적용
+
+트랜잭션은 어디서 동작해야할까.
+
+어디서 시작하고, 어디서 커밋,롤백을 해야할까?
+
+원자적인 수행을 필요로하는 서비스 로직에서 수행돼야한다.
+
+```java
+public void accountTransfer(String fromId, String toId, int money) throws SQLException {
+        Member fromMember = memberRepository.findById(fromId);
+        Member toMember = memberRepository.findById(toId);
+
+        memberRepository.update(fromId, fromMember.getMoney() - money);
+        if(toMember.getMemberId().equals("ex")){
+            throw new IllegalStateException("계좌이체 중 예외 발생");
+        }
+        memberRepository.update(toId, toMember.getMoney() + money);
+    }
+```
+
+위 로직에서 findById, update는 각각 커넥션을 형성함에따라 DB세션도 다르게 생성돼 트랜잭션 적용이 어려워
+
+서비스레이어에서 커넥션을 생성하고 (서비스레이어의 dataSource에대한 의존성이 생김) repository레이어에 넘겨줘야한다.
+
+```java
+public void accountTransfer(String fromId, String toId, int money) throws SQLException {
+        Connection con = dataSource.getConnection();
+        try{
+            con.setAutoCommit(false);
+            bizlogic(fromId, toId, money, con);
+            con.commit();
+        }catch (Exception e){
+            con.rollback();
+            throw new IllegalStateException(e);
+        }finally {
+            if(con != null){
+                try{
+                    // 오토커밋을 다시 켜고 커넥션 풀에 넣어주자
+                    con.setAutoCommit(true);
+                    con.close();
+                }catch (Exception e){
+                    log.info("error",e);
+                }
+            }
+        }
+    }
+```
+
+위 코드는 트랜잭션을 적용한 모습인데, 커넥션을 생성하고 전달하고 마지막에 리소스를 정리한다.
+
+서비스 레이어가 위와같은 중복된 코드, 핵심 비즈니스 로직과 관련없는 코드가 많이 들어와있다.
+
+스프링이 이 문제를 어떻게 해결했는지 배우자.
+
+## 설계 팁
+
+오버엔지니어링을 할 필요는 없지만 (몇 줄 안짜는데 복잡하게 가져갈 필요는 없지만), 어떤 설계가 더 좋은지 고민이 될 때는 변경의 영향을 가장 적게 받는 설계인지 고민하자.
+
+## plain JDBC 트랜잭션 문제점들
+
+flow
+
+1. 트랜잭션은 어디서 시작해야 옳은가?
+   - 당연히 서비스 layer. 왜? 원자적 단위의 로직 수행을 서비스 레이어에서 하기때문에 커밋이나 롤백을 적용할 적합한 위치
+2. 그렇다면 Repository에서 JDBC 기술을 사용한다면 서비스레이어도 JDBC기술에 의존적인 트랜잭션 관리를해야함
+3. 이 문제점이 트랜잭션 추상화가 이루어지지않아 생긴 문제점
+4. 또 트랜잭션은 커넥션을 유지해야만 트랜잭션 관리가 가능한데, 이를 위해서는 서비스단에서 커넥션을 파라미터 형식으로 동기화해야함
+
+즉 크게 두 가지 문제점
+
+### 트랜잭션 추상화
+
+spring은 **PlatformTranscationManager** 인터페이스를 이용해 여러 DB벤더 기술에 구체적인 트랜잭션 관리 기술을 PSA패턴으로 관리한다.
+
+즉 의존성을 낮추고, 변경에 예민한 코드를 작성하지 않게 해준다.
+
+DI/IoC를 이용해서... 대박ㅎㅎ
+
+여기서 커넥션을 얻어오고, 동기화매니저를 통해 관리하고, 롤백, 커밋, 리소스 정리까지 다 해준다.
+
+### 트랜잭션 동기화
+
+**PlatformTranscationManager**는 DataSource를 이용해 커넥션을 얻어오고 이 커넥션을 **TrasactionSynchronizationManager**를 통해 커넥션을 보관한다.
+
+TrasactionSynchronizationManager는 스레드 로컬을 이용해 독립적인 저장공간을 사용해서 커넥션을 멀티스레드 상황에서도 안전하게 유지시킨다.
+
+즉 커넥션을 불편하게 여러 DB접근단에 넘겨줄 필요가 없어진다.
+
+# +
+
+트랜잭션을 열지 않았다면 커넥션을 새롭게 형성함.
+
+트랜잭션이 열렸다면 레포지토리에서 리소스 정리하지않고 다시 동기화매니저에 보관.
+
+## 트랜잭션 처리 코드의 반복
+
+트랜잭션 템플릿을 이용해 어느정도 코드의 중복을 제거 했지만 그럼에도 트랜잭션 템플릿의 메서드를 실행하고 예외를 잡아주는 과정을 서비스 레이어에서 처리해야한다.
+
+```java
+txTemplate.executeWithoutResult((status) -> {
+             try {
+//비즈니스 로직
+                 bizLogic(fromId, toId, money);
+             } catch (SQLException e) {
+                 throw new IllegalStateException(e);
+             }
+});
+```
+
+이 문제는 AOP를 이용해 중심 관심사와 부차적 관심사를 분리해내야한다.
+
+## AOP @Transactional
+
+@Transactional 을 사용하면 스프링은 내부적으로 프록시 객체를 생성해 동작한다.
